@@ -28,7 +28,7 @@ import org.mmbase.security.Authorization;
  * {@link #BasicQuery(Cloud, BasicSearchQuery)}.
  *
  * @author Michiel Meeuwissen
- * @version $Id: BasicQuery.java,v 1.76 2009-01-12 13:32:43 michiel Exp $
+ * @version $Id: BasicQuery.java,v 1.61.2.4 2008-06-28 11:57:10 nklasens Exp $
  * @since MMBase-1.7
  * @see org.mmbase.storage.search.implementation.BasicSearchQuery
  */
@@ -60,7 +60,7 @@ public class BasicQuery implements Query  {
     protected Constraint insecureConstraint = null;
 
 
-    private   HashMap<String, Integer>  aliasSequences = new HashMap<String, Integer>(); // must be HashMap because cloneable
+    private   HashMap  aliasSequences = new HashMap(); // must be HashMap because cloneable
     // to make unique table aliases. This is similar impl. as  in core. Why should it be at all....
 
 
@@ -79,12 +79,12 @@ public class BasicQuery implements Query  {
      * The implicitely added 'extra' fields. These are removed if the query becomes 'distinct'. So,
      * you can e.g. not do element= on a distinct query result.
      */
-    protected List<StepField> implicitFields = new ArrayList<StepField>();
+    protected List implicitFields = new ArrayList();
 
     /**
      * The explicitely added 'extra' fields. Because you explicitely added those, they will not be removed if the query becomes 'distinct'.
      */
-    protected List<StepField> explicitFields = new ArrayList<StepField>();
+    protected List explicitFields = new ArrayList();
 
     BasicQuery(Cloud c) {
         query = new BasicSearchQuery();
@@ -115,10 +115,10 @@ public class BasicQuery implements Query  {
 
     // SearchQuery impl:
 
-    public List<Step> getSteps() {
+    public List getSteps() {
         return query.getSteps();
     }
-    public List<StepField> getFields() {
+    public List getFields() {
         return query.getFields();
     }
     public Constraint getConstraint() {
@@ -141,7 +141,7 @@ public class BasicQuery implements Query  {
     public int getOffset() {
         return query.getOffset();
     }
-    public List<SortOrder> getSortOrders() {
+    public List getSortOrders() {
         return query.getSortOrders();
     }
     public boolean isDistinct() {
@@ -183,7 +183,7 @@ public class BasicQuery implements Query  {
                         clone.setConstraint(null);
                     }
                     if (compConstraint.getChilds().size() == 1) { // no need to let it composite then
-                        Constraint newConstraint = compConstraint.getChilds().get(0);
+                        Constraint newConstraint = (Constraint) compConstraint.getChilds().get(0);
                         clone.setConstraint(newConstraint);
                     }
                 }
@@ -192,11 +192,11 @@ public class BasicQuery implements Query  {
 
     }
 
-    @Override public BasicQuery clone() { // also works for descendants (NodeQuery)
+    public Object clone() { // also works for descendants (NodeQuery)
         try {
             BasicQuery clone = (BasicQuery) super.clone();
             clone.query = (BasicSearchQuery) query.clone();
-            clone.aliasSequences = (HashMap<String, Integer>) aliasSequences.clone();
+            clone.aliasSequences = (HashMap) aliasSequences.clone();
             removeSecurityConstraintFromClone(clone.query);
             clone.insecureConstraint = null;
             clone.queryCheck = null;
@@ -230,11 +230,11 @@ public class BasicQuery implements Query  {
      */
     protected String createAlias(String  name) {
         if (used) throw new BridgeException("Query was used already");
-        Integer seq = aliasSequences.get(name);
+        Integer seq = (Integer) aliasSequences.get(name);
         if (seq == null) {
-            seq = Integer.valueOf(0);
+            seq = new Integer(0);
         } else {
-            seq = Integer.valueOf(seq.intValue() + 1);
+            seq = new Integer(seq.intValue() + 1);
         }
         aliasSequences.put(name, seq);
         return glueAlias(name, seq);
@@ -276,12 +276,12 @@ public class BasicQuery implements Query  {
         // check if it was the lastely 'automaticly' create alias, in which case we free the sequence number again
         // (also to fix #6547)
 
-        Integer currentSeq  = aliasSequences.get(aliasBase);
+        Integer currentSeq  = (Integer) aliasSequences.get(aliasBase);
         if (currentSeq != null && glueAlias(aliasBase, currentSeq).equals(currentAlias)) {
             if (currentSeq.intValue() == 0) {
                 aliasSequences.put(aliasBase, null);
             } else {
-                aliasSequences.put(aliasBase, Integer.valueOf(currentSeq.intValue() - 1));
+                aliasSequences.put(aliasBase, new Integer(currentSeq.intValue() - 1));
             }
         }
         if ("".equals(alias)) {
@@ -347,7 +347,7 @@ public class BasicQuery implements Query  {
             MMObjectNode relDefNode = relDef.getNode(r);
             InsRel insrel = ((RelDef)relDefNode.getBuilder()).getBuilder(relDefNode.getNumber());
             BasicRelationStep step =  addRelationStep(insrel, otherNodeManager, relationDir);
-            step.setRole(Integer.valueOf(r));
+            step.setRole(new Integer(r));
             if (! cloud.hasNodeManager(role)) {
                 step.setAlias(createAlias(role));
             }
@@ -367,7 +367,7 @@ public class BasicQuery implements Query  {
     public void removeFields() {
         query.removeFields();
         explicitFields.clear();
-        Iterator<StepField> i = implicitFields.iterator();
+        Iterator i = implicitFields.iterator();
         while (i.hasNext()) {
             BasicStepField sf = (BasicStepField) i.next();
             Step addedStep = sf.getStep();
@@ -383,7 +383,7 @@ public class BasicQuery implements Query  {
         BasicStepField sf = new BasicStepField(step, cf);
         if (! implicitFields.remove(sf)) {// it's explicitly added now
             if (cf.inStorage()) {
-                sf = query.addField(step, cf);
+                sf = query.addField(step, cf); 
             } else {
                 log.debug("Not adding the field " + field + " because it is not in storage (this is a virtual field)");
             }
@@ -391,6 +391,7 @@ public class BasicQuery implements Query  {
         explicitFields.add(sf);
         return sf;
     }
+
     public StepField addField(String fieldIdentifier) {
         // code copied from createStepField, should be centralized
         if (used) throw new BridgeException("Query was used already");
@@ -466,24 +467,18 @@ public class BasicQuery implements Query  {
     }
 
 
-    /**
-     * @since MMBase-1.9.1
-     */
-    public void removeImplicitFields() {
-       query.removeFields();
-       implicitFields.clear();
-       Iterator<StepField> i = explicitFields.iterator();
-       while (i.hasNext()) {
-           BasicStepField sf = (BasicStepField) i.next();
-           query.addField(sf.getStep(), sf.getField());
-       }
-    }
 
     public Query setDistinct(boolean distinct) {
         if (used) throw new BridgeException("Query was used already");
         query.setDistinct(distinct);
         if (distinct) { // in that case, make sure only the 'explicitely' added fields remain.
-            removeImplicitFields();
+            query.removeFields();
+            implicitFields.clear();
+            Iterator i = explicitFields.iterator();
+            while (i.hasNext()) {
+                BasicStepField sf = (BasicStepField) i.next();
+                query.addField(sf.getStep(), sf.getField());
+            }
         }
         return this;
     }
@@ -519,7 +514,7 @@ public class BasicQuery implements Query  {
     }
 
     public FieldValueConstraint createConstraint(StepField f, int op, Object v) {
-        if (v instanceof Node) v = Integer.valueOf(((Node)v).getNumber());
+        if (v instanceof Node) v = new Integer(((Node)v).getNumber());
         BasicFieldValueConstraint c = new BasicFieldValueConstraint(f, v);
         c.setOperator(op);
         return c;
@@ -535,24 +530,21 @@ public class BasicQuery implements Query  {
         return new BasicFieldValueBetweenConstraint(f, o1, o2);
     }
 
-    public FieldValueInConstraint createConstraint(StepField f, SortedSet<? extends Object> v) {
+    public FieldValueInConstraint createConstraint(StepField f, SortedSet v) {
         if (v.size() == 0) { // make sure the query becomes empty!
             Step step = f.getStep();
             StepField nf = createStepField(step, "number");
             BasicFieldValueInConstraint c = new BasicFieldValueInConstraint(nf);
-            c.addValue(Integer.valueOf(-1));
+            c.addValue(new Integer(-1));
             return c;
         } else {
             BasicFieldValueInConstraint c = new BasicFieldValueInConstraint(f);
-            for (Object o : v) {
-                c.addValue(o);
+            Iterator i = v.iterator();
+            while (i.hasNext()) {
+                c.addValue(i.next());
             }
             return c;
         }
-    }
-
-    public FieldValueInQueryConstraint createConstraint(StepField f, Query q) {
-        return  new BasicFieldValueInQueryConstraint(f, q);
     }
 
     public Constraint setInverse(Constraint c, boolean i) {
@@ -582,6 +574,7 @@ public class BasicQuery implements Query  {
         query.setConstraint(c);
     }
 
+
     public SortOrder addSortOrder(StepField f, int direction) {
         return addSortOrder(f, direction, false);
     }
@@ -608,7 +601,6 @@ public class BasicQuery implements Query  {
     public void addNode(Step  s, int nodeNumber) {
         if (used) throw new BridgeException("Query was used already");
         BasicStep step = (BasicStep) s;
-        if (step == null) throw new IllegalArgumentException("Step may not be null");
         step.addNode(nodeNumber);
         return;
     }
@@ -695,29 +687,19 @@ public class BasicQuery implements Query  {
         return cloud.getList(this);
     }
 
-    @Override public boolean equals(Object obj) {
-        if (obj instanceof BasicQuery) {
-            obj = ((BasicQuery)obj).query;
-        }
+    public boolean equals(Object obj) {
         return query.equals(obj);
     }
 
     // javadoc is inherited
-    @Override public int hashCode() {
+    public int hashCode() {
         return query.hashCode();
     }
 
 
-    @Override public String toString() {
-        return query.toString() + (used ? " (used)" : "") + " INSECURE: " + insecureConstraint + " QUERYCHECK: " + queryCheck;
+    public String toString() {
+        return query.toString() + (used ? "(used)" : "") + "INSECURE: " + insecureConstraint + " QUERYCHECK: " + queryCheck;
 
-    }
-
-    /**
-     * Getter for use in EL. Returns {@link #toSql}.
-     */
-    public String getSql() {
-        return toSql();
     }
 
     public String toSql() {
