@@ -18,15 +18,16 @@ import org.mmbase.bridge.util.Queries;
 import org.mmbase.storage.search.*;
 import org.mmbase.storage.search.implementation.BasicCompositeConstraint;
 import org.mmbase.util.*;
+import org.mmbase.util.logging.*;
 
 /**
- * This class contains static methods related to creating a Query object using a (fragment of an) XML.
  *
  * @author Pierre van Rooden
- * @version $Id: QueryReader.java,v 1.20 2008-09-04 05:56:22 michiel Exp $
+ * @version $Id: QueryReader.java,v 1.8.2.4 2008-08-18 11:07:48 michiel Exp $
  * @since MMBase-1.8
  **/
-public abstract class QueryReader {
+public class QueryReader {
+    private static final Logger log = Logging.getLoggerInstance(QueryReader.class);
 
     public static final String XSD_SEARCHQUERY_1_0 = "searchquery.xsd";
     public static final String NAMESPACE_SEARCHQUERY_1_0 = "http://www.mmbase.org/xmlns/searchquery";
@@ -36,10 +37,10 @@ public abstract class QueryReader {
 
     /**
      * Register the namespace and XSD used by QueryReader
-     * This method is called by EntityResolver.
+     * This method is called by XMLEntityResolver.
      */
     public static void registerSystemIDs() {
-        org.mmbase.util.xml.EntityResolver.registerSystemID(NAMESPACE_SEARCHQUERY_1_0 + ".xsd",  XSD_SEARCHQUERY_1_0, QueryReader.class);
+        XMLEntityResolver.registerSystemID(NAMESPACE_SEARCHQUERY_1_0 + ".xsd",  XSD_SEARCHQUERY_1_0, QueryReader.class);
     }
 
     /**
@@ -55,8 +56,8 @@ public abstract class QueryReader {
      * searchquery namespace
      */
     static public String getAttribute(Element element, String localName) {
-        if (element.hasAttributeNS(NAMESPACE_SEARCHQUERY, localName)) {
-            return element.getAttributeNS(NAMESPACE_SEARCHQUERY, localName);
+        if (element.hasAttributeNS(NAMESPACE_SEARCHQUERY,localName)) {
+            return element.getAttributeNS(NAMESPACE_SEARCHQUERY,localName);
         } else {
             return element.getAttribute(localName);
         }
@@ -66,30 +67,21 @@ public abstract class QueryReader {
      */
     protected static String getFullFieldName(QueryDefinition queryDefinition, String fieldName) {
         if (queryDefinition.isMultiLevel && fieldName.indexOf('.') == -1) {
-            NodeManager manager = queryDefinition.elementManager;
-            if (manager == null) throw new RuntimeException("No element manager in " + queryDefinition);
-            fieldName = manager.getName() + "." + fieldName;
+            fieldName = queryDefinition.elementManager.getName() + "." + fieldName;
         }
         return fieldName;
     }
 
     protected static void addField(Element fieldElement, QueryDefinition queryDefinition, QueryConfigurer configurer) {
-        if (hasAttribute(fieldElement, "name")) {
+        if (hasAttribute(fieldElement,"name")) {
             FieldDefinition fieldDefinition = configurer.getFieldDefinition();
             fieldDefinition.fieldName = getFullFieldName(queryDefinition,fieldElement.getAttribute("name"));
-
-            String opt = fieldElement.getAttribute("optional");
-
-            if (opt.equals("")) {
-                try {
-                    fieldDefinition.stepField = queryDefinition.query.createStepField(fieldDefinition.fieldName);
-                } catch (IllegalArgumentException iae) {
-                    // the field did not exist in the database.
-                    // this is possible if the field is, for instance, a bytefield that is stored on disc.
-                    fieldDefinition.stepField = null;
-                }
-            } else {
-                fieldDefinition.optional = java.util.regex.Pattern.compile(opt);
+            try {
+                fieldDefinition.stepField = queryDefinition.query.createStepField(fieldDefinition.fieldName);
+            } catch (IllegalArgumentException iae) {
+                // the field did not exist in the database.
+                // this is possible if the field is, for instance, a bytefield that is stored on disc.
+                fieldDefinition.stepField = null;
             }
             // custom configuration of field
             fieldDefinition.configure(fieldElement);
@@ -155,8 +147,8 @@ public abstract class QueryReader {
         NodeQuery query = dayMarks.createQuery();
         StepField step = query.createStepField("daycount");
         int currentDay = (int) (System.currentTimeMillis()/(1000*60*60*24));
-        int day = currentDay  - age;
-        Constraint constraint = query.createConstraint(step, FieldCompareConstraint.LESS_EQUAL, Integer.valueOf(day));
+        Integer day = new Integer(currentDay  - age);
+        Constraint constraint = query.createConstraint(step, FieldCompareConstraint.LESS_EQUAL, day);
         query.setConstraint(constraint);
         query.addSortOrder(query.createStepField("daycount"), SortOrder.ORDER_DESCENDING);
         query.setMaxNumber(1);
@@ -184,8 +176,8 @@ public abstract class QueryReader {
         }
         StepField stepField = null;
         String fieldName = "number";
-        if (hasAttribute(constraintElement,"element")) {
-            if (hasAttribute(constraintElement,"field")) {
+        if (hasAttribute(constraintElement, "element")) {
+            if (hasAttribute(constraintElement, "field")) {
                 throw new IllegalArgumentException("Can not specify both 'field' and 'element' attributes on ageconstraint");
             }
             fieldName = getAttribute(constraintElement,"element") + ".number";
@@ -212,17 +204,17 @@ public abstract class QueryReader {
             int maxMarker = getDayMark(cloud, maxAge);
             if (maxMarker > 0) {
                 // BETWEEN constraint
-                constraint = queryDefinition.query.createConstraint(stepField, Integer.valueOf(maxMarker + 1), Integer.valueOf(getDayMark(cloud, minAge - 1)));
+                constraint = queryDefinition.query.createConstraint(stepField, new Integer(maxMarker + 1), new Integer(getDayMark(cloud, minAge - 1)));
             } else {
-                constraint = queryDefinition.query.createConstraint(stepField, FieldCompareConstraint.LESS_EQUAL, Integer.valueOf(getDayMark(cloud, minAge - 1)));
+                constraint = queryDefinition.query.createConstraint(stepField, FieldCompareConstraint.LESS_EQUAL, new Integer(getDayMark(cloud, minAge - 1)));
             }
         } else if (maxAge != -1) { // only on max
             int maxMarker = getDayMark(cloud, maxAge);
             if (maxMarker > 0) {
-                constraint = queryDefinition.query.createConstraint(stepField, FieldCompareConstraint.GREATER_EQUAL, Integer.valueOf(maxMarker + 1));
+                constraint = queryDefinition.query.createConstraint(stepField, FieldCompareConstraint.GREATER_EQUAL, new Integer(maxMarker + 1));
             }
         } else if (minAge > 0) {
-            constraint = queryDefinition.query.createConstraint(stepField, FieldCompareConstraint.LESS_EQUAL, Integer.valueOf(getDayMark(cloud, minAge - 1)));
+            constraint = queryDefinition.query.createConstraint(stepField, FieldCompareConstraint.LESS_EQUAL, new Integer(getDayMark(cloud, minAge - 1)));
         }
         return constraint;
     }
@@ -230,13 +222,14 @@ public abstract class QueryReader {
 
     protected static Integer getAlias(Cloud cloud, String name) {
         org.mmbase.bridge.Node node = cloud.getNode(name);
-        return node.getNumber();
+        return new Integer(node.getNumber());
     }
 
-    protected static SortedSet<Integer> getAliases(Cloud cloud, List<String> names) {
-        SortedSet<Integer> set = new TreeSet<Integer>();
-        for (String name : names) {
-            set.add(getAlias(cloud, name));
+    protected static SortedSet getAliases(Cloud cloud, List names) {
+        SortedSet set = new TreeSet();
+        Iterator i = names.iterator();
+        while (i.hasNext()) {
+            set.add(getAlias(cloud, (String) i.next()));
         }
         return set;
     }
@@ -256,20 +249,20 @@ public abstract class QueryReader {
         StepField stepField = queryDefinition.query.createStepField(step, "number");
 
         String name = getAttribute(constraintElement,"name");
-        List<String> names =  Casting.toList(name);
+        List names =  Casting.toList(name);
         return queryDefinition.query.createConstraint(stepField, getAliases(queryDefinition.query.getCloud(),names));
     }
 
-    protected static SortedSet<Integer> getOTypes(Cloud cloud, List<String> names, boolean descendants) {
-        SortedSet<Integer> set = new TreeSet<Integer>();
-        Iterator<String> i = names.iterator();
+    protected static SortedSet getOTypes(Cloud cloud, List names, boolean descendants) {
+        SortedSet set = new TreeSet();
+        Iterator i = names.iterator();
         while (i.hasNext()) {
-            NodeManager nm = cloud.getNodeManager(i.next());
-            set.add(nm.getNumber());
+            NodeManager nm = cloud.getNodeManager((String) i.next());
+            set.add(new Integer(nm.getNumber()));
             if (descendants) {
                 NodeManagerIterator j = nm.getDescendants().nodeManagerIterator();
                 while (j.hasNext()) {
-                    set.add(j.nextNodeManager().getNumber());
+                    set.add(new Integer(j.nextNodeManager().getNumber()));
                 }
             }
         }
@@ -290,7 +283,7 @@ public abstract class QueryReader {
         }
         StepField stepField = queryDefinition.query.createStepField(step, "otype");
         String name = getAttribute(constraintElement,"name");
-        List<String> names =  Casting.toList(name);
+        List names =  Casting.toList(name);
         boolean descendants = true;
         if (hasAttribute(constraintElement,"descendants")) {
             descendants = "true".equals(getAttribute(constraintElement,"descendants"));
@@ -399,6 +392,7 @@ public abstract class QueryReader {
             if (hasAttribute(queryElement,"type")) {
                 path = getAttribute(queryElement,"type");
                 element = path;
+                searchDirs = getAttribute(queryElement,"searchdirs");
             } else if (hasAttribute(queryElement,"name")) {
                 path = getAttribute(queryElement,"name");
                 element = path;
@@ -408,31 +402,34 @@ public abstract class QueryReader {
                 if (hasAttribute(queryElement,"element")) {
                   element = getAttribute(queryElement,"element");
                 } else {
-                    List<String> builders  = StringSplitter.split(path);
-                    element = builders.get(builders.size()-1);
+                    List builders  = StringSplitter.split(path);
+                    element = (String)builders.get(builders.size()-1);
                 }
             }
+
             if (relateFrom != null) {
                 path = relateFrom + "," + path;
             }
-
-
             QueryDefinition queryDefinition = configurer.getQueryDefinition();
             queryDefinition.isMultiLevel = !path.equals(element);
 
+
             if (element != null && ! "".equals(element)) {
-                queryDefinition.elementManager = cloud.getNodeManager(Queries.removeDigits(element));
+                queryDefinition.elementManager = cloud.getNodeManager(element);
             }
-            if (queryDefinition.isMultiLevel) {
+            if (!path.equals(element)) /* (queryDefinition.isMultiLevel) */ {
                 queryDefinition.query = cloud.createQuery();
                 Queries.addPath(queryDefinition.query, path, searchDirs);
+                if (log.isDebugEnabled()) {
+                    log.debug("" + queryDefinition.query.toSql());
+                }
             } else {
                 queryDefinition.query = queryDefinition.elementManager.createQuery();
             }
-            if (element != null && ! "".equals(element)) {
+            if (element != null) {
                 queryDefinition.elementStep = queryDefinition.query.getStep(element);
             }
-            if (queryDefinition.fields == null) queryDefinition.fields = new ArrayList<FieldDefinition>();
+            if (queryDefinition.fields == null) queryDefinition.fields = new ArrayList();
 
             if (hasAttribute(queryElement, "startnodes")) {
                 String startNodes = getAttribute(queryElement, "startnodes");
@@ -441,7 +438,9 @@ public abstract class QueryReader {
 
             // custom configurations to the query
             queryDefinition.configure(queryElement);
-
+            if (log.isDebugEnabled()) {
+                log.debug("" + queryDefinition.query.toSql());
+            }
             NodeList childNodes = queryElement.getChildNodes();
             for (int k = 0; k < childNodes.getLength(); k++) {
                 if (childNodes.item(k) instanceof Element) {
