@@ -19,9 +19,9 @@ import org.mmbase.module.corebuilders.InsRel;
 import org.mmbase.module.builders.DayMarkers;
 import org.mmbase.security.*;
 import org.mmbase.storage.search.*;
-import org.mmbase.storage.search.implementation.NodeSearchQuery;
-import org.mmbase.storage.search.implementation.BasicFieldValueConstraint;
-import org.mmbase.util.*;
+import org.mmbase.util.Casting;
+import org.mmbase.util.SizeOf;
+import org.mmbase.util.DynamicDate;
 import org.mmbase.util.logging.*;
 import org.mmbase.util.functions.*;
 import org.w3c.dom.Document;
@@ -38,13 +38,16 @@ import org.w3c.dom.Document;
  * @author Eduard Witteveen
  * @author Michiel Meeuwissen
  * @author Ernst Bunders
- * @version $Id: MMObjectNode.java,v 1.229 2009-01-05 16:36:58 michiel Exp $
+ * @version $Id: MMObjectNode.java,v 1.193.2.12 2008-06-28 11:57:10 nklasens Exp $
  */
 
-public class MMObjectNode implements org.mmbase.util.SizeMeasurable, java.io.Serializable { // Comparable<MMObjectNode>  {
+public class MMObjectNode implements org.mmbase.util.SizeMeasurable, java.io.Serializable  {
     private static final Logger log = Logging.getLoggerInstance(MMObjectNode.class);
 
-
+    /**
+     * @deprecated Simply use <code>null</code>
+     */
+    public final static Object VALUE_NULL = null;
     /**
      * Large fields (blobs) are loaded 'lazily', so only on explicit request. Until the first exlicit request this value is stored in such fields.
      * It can be set back into the field with {@link #storeValue}, to unload the field again.
@@ -53,12 +56,28 @@ public class MMObjectNode implements org.mmbase.util.SizeMeasurable, java.io.Ser
     public final static String VALUE_SHORTED = "$SHORTED";
 
     /**
+     * @deprecated use RelationsCache.getCache().getHits()
+     */
+    public static int getRelationCacheHits() {
+        return RelationsCache.getCache().getHits();
+    }
+
+    /**
+     * @deprecated use RelationsCache.getCache().getMisses()
+     */
+    public static int getRelationCacheMiss() {
+        return RelationsCache.getCache().getMisses();
+    }
+
+
+    /**
      * Map which stores the current database value for fields when
-     * they change in the node.
+     * then change in the node.
      * it can be used to optimise cacheing
      * @since MMBase-1.8
      */
-    private Map<String, Object> oldValues = new HashMap<String, Object>();
+    private Map oldValues = new HashMap();
+
 
     /**
      * Holds the name - value pairs of this node (the node's fields).
@@ -68,8 +87,8 @@ public class MMObjectNode implements org.mmbase.util.SizeMeasurable, java.io.Ser
      * It should then be made private, and methods that change the map (storeValue) be made synchronized.
      * Note: To avoid synchronisation conflicts, we can't really change the type until the property is made private.
      */
-    protected Map<String, Object> values = Collections.synchronizedMap(new HashMap<String, Object>());
-    private Map<String, Long> sizes = Collections.synchronizedMap(new HashMap<String, Long>());
+    protected Map values = Collections.synchronizedMap(new HashMap());
+    private Map sizes = Collections.synchronizedMap(new HashMap());
 
     /**
      * Determines whether the node is being initialized (typically when it is loaded from the database).
@@ -81,17 +100,15 @@ public class MMObjectNode implements org.mmbase.util.SizeMeasurable, java.io.Ser
     /**
      * Holds the 'extra' name-value pairs (the node's properties)
      * which are retrieved from the 'properties' table.
+     * @scope private
      */
-    private Map<String,MMObjectNode> properties;
-    // object to sync access to properties
-    private final Object properties_sync = new Object();
-
+    public Hashtable properties;
 
     /**
      * Set which stores the keys of the fields that were changed
      * since the last commit.
      */
-    private Set<String> changed = Collections.synchronizedSet(new HashSet<String>());
+    private Set changed = Collections.synchronizedSet(new HashSet());
 
     /**
      * Pointer to the parent builder that is responsible for this node.
@@ -103,7 +120,7 @@ public class MMObjectNode implements org.mmbase.util.SizeMeasurable, java.io.Ser
 
     /**
      * Pointer to the actual builder to which this node belongs.
-     * This value is initialised by the first call to {@link #getBuilder}
+     * This value is initialised through the first call to {@link #getBuilder}
      */
     private MMObjectBuilder builder = null;
 
@@ -114,9 +131,12 @@ public class MMObjectNode implements org.mmbase.util.SizeMeasurable, java.io.Ser
 
     /**
      * New aliases of the node
+     * @scope private
      */
-    public Set<String> aliases = null;
+    private Set aliases = null;
 
+    // object to sync access to properties
+    private final Object properties_sync = new Object();
 
     /**
      * temporarily holds a new context for a node
@@ -124,13 +144,6 @@ public class MMObjectNode implements org.mmbase.util.SizeMeasurable, java.io.Ser
      */
 
     private String newContext = null;
-
-    /**
-     * Just a counter to keep track of the number of instances of MMObjectNode that are produced in
-     * this mmbase
-     */
-    private static long seq = 0;
-    public long sequence = seq++;
 
    /**
     * Default Main constructor, creates a node that is new and not (yet) in storage.
@@ -171,7 +184,7 @@ public class MMObjectNode implements org.mmbase.util.SizeMeasurable, java.io.Ser
      *
      * @since MMBase-1.8
      */
-    public MMObjectNode(MMObjectBuilder parent, Map<String, Object> map) {
+    public MMObjectNode(MMObjectBuilder parent, Map map) {
         isNew = false;
         this.parent = parent;
         values = map;
@@ -249,6 +262,7 @@ public class MMObjectNode implements org.mmbase.util.SizeMeasurable, java.io.Ser
         return success;
     }
 
+
     /**
      * Undo changes made to the node.
      *
@@ -265,7 +279,13 @@ public class MMObjectNode implements org.mmbase.util.SizeMeasurable, java.io.Ser
      * @return the new node key (number field), or -1 if the insert failed
      */
     public int insert(String userName) {
-        return parent.insert(userName, this);
+        int n = parent.insert(userName, this);
+        /*
+        if (n >= 0) {
+            isNew = false;
+        }
+        */
+        return n;
     }
 
     /**
@@ -292,7 +312,7 @@ public class MMObjectNode implements org.mmbase.util.SizeMeasurable, java.io.Ser
      * Commit this node to the storage
      * @param user the user who commits the node.
      *        Used to set security-related information
-     * @return <code>true</code> if successful
+     * @return <code>true</code> if succesful
      * @since MMBase-1.7
      */
     public boolean commit(UserContext user) {
@@ -346,12 +366,7 @@ public class MMObjectNode implements org.mmbase.util.SizeMeasurable, java.io.Ser
     public String getContext(UserContext user) {
         if (newContext != null) return newContext;
         if (getNumber() < 0) return user.getOwnerField();
-        try {
-            return parent.getMMBase().getMMBaseCop().getAuthorization().getContext(user, getNumber());
-        } catch (Exception e) {
-            log.warn(e.getMessage(), e);
-            return getStringValue("owner");
-        }
+        return parent.getMMBase().getMMBaseCop().getAuthorization().getContext(user, getNumber());
     }
 
     /**
@@ -359,7 +374,7 @@ public class MMObjectNode implements org.mmbase.util.SizeMeasurable, java.io.Ser
      * @param user the user who requests the context of the node.
      * @since MMBase-1.7.1
      */
-    public Set<String> getPossibleContexts(UserContext user) {
+    public Set getPossibleContexts(UserContext user) {
         if (getNumber() < 0) {
             // a new node has yet no context (except the default).
             // instead of searching the database for data, return a
@@ -367,7 +382,7 @@ public class MMObjectNode implements org.mmbase.util.SizeMeasurable, java.io.Ser
             // and the contexts "system" and "admin".
             // A better way involves rewriting the security layer to accept
             // MMObjectNodes instead of node numbers
-            Set<String> contexts = new HashSet<String>();
+            Set contexts = new HashSet();
             contexts.add(getContext(user));
             contexts.add("admin");
             contexts.add("system");
@@ -410,28 +425,31 @@ public class MMObjectNode implements org.mmbase.util.SizeMeasurable, java.io.Ser
      * @since MMBase-1.6.2
      */
     String defaultToString() {
-        StringBuilder result = new StringBuilder();
+        StringBuffer result = new StringBuffer();
         try {
-            Set<Map.Entry<String, Object>> entrySet = values.entrySet();
+            Set entrySet = values.entrySet();
             synchronized(values) {
-                Iterator<Map.Entry<String, Object>> i = entrySet.iterator();
+                Iterator i = entrySet.iterator();
                 while (i.hasNext()) {
-                    Map.Entry<String, Object> entry = i.next();
-                    String key = entry.getKey();
+                    Map.Entry entry = (Map.Entry) i.next();
+                    String key = (String) entry.getKey();
+                    int dbtype = getDBType(key);
                     String value = "" + entry.getValue();  // XXX:should be retrieveValue ?
-                    if (result.length() == 0) {
-                        result.append(key).append("='").append(value).append("'");
+                    if ("".equals(result.toString())) {
+                        result = new StringBuffer(key+"='"+value+"'"); // can this occur?
                     } else {
-                        result.append(",").append(key).append("='").append(value).append("'");
+                        result.append(","+key+"='");
+                        Casting.toStringBuffer(result, value).append("'");
                     }
                 }
             }
         } catch(Throwable e) {
-            result.append(values); // simpler version...
+            result.append("" + values); // simpler version...
         }
         result.append(super.toString());
         return result.toString();
     }
+
 
     /**
      * @return <code>true</code> if field exists and may be used.
@@ -459,19 +477,6 @@ public class MMObjectNode implements org.mmbase.util.SizeMeasurable, java.io.Ser
     }
 
     /**
-     * MMObjectNode's are serializable (which is used by e.g. NodeEvent's). So all values must be
-     * serializable too.
-     * This methods check that, and logs a warning if not so.
-     * @since MMBase-1.9
-     */
-    protected final Object checkSerializable(String fieldName, Object fieldValue) {
-        if (fieldValue != null && (! (fieldValue instanceof Serializable))) {
-            log.warn("Value for " + fieldName + " is not serializable: " + fieldValue.getClass() + " " + fieldValue, new Exception());
-        }
-        return fieldValue;
-    }
-
-    /**
      * Stores a value in the values hashtable.
      * This is a low-level method that circumvents typechecking and the triggers of extended classes.
      * You should normally call {@link #setValue} to change fields.
@@ -486,10 +491,6 @@ public class MMObjectNode implements org.mmbase.util.SizeMeasurable, java.io.Ser
             // This is just a hack to make app1 import/export working, withough exposing the values map.
             values.remove(fieldName);
         }
-        if (fieldValue != null && (fieldValue instanceof InputStream)) {
-            fieldValue = new SerializableInputStream((InputStream) fieldValue);
-        }
-        fieldValue = checkSerializable(fieldName, fieldValue);
         if (checkFieldExistance(fieldName)) {
             values.put(fieldName, fieldValue);
         }
@@ -505,10 +506,10 @@ public class MMObjectNode implements org.mmbase.util.SizeMeasurable, java.io.Ser
      */
     private void storeOldValue(String fieldName, Object object) {
         if (! oldValues.containsKey(fieldName)) {
-            object = checkSerializable(fieldName,  object);
             oldValues.put(fieldName, object);
         }
     }
+
 
     /**
      * Retrieves a value from the values hashtable.
@@ -530,8 +531,9 @@ public class MMObjectNode implements org.mmbase.util.SizeMeasurable, java.io.Ser
         return false;
     }
 
+
     /**
-     * If a node is still 'new' you must persistify it with {@link #insert(String)}, and otherwise with {@link #commit()}.
+     * If a node is still 'new' you must persistify it with {@link #insert}, and otherwise with {@link #commit}.
      * @since MMBase-1.8
      */
     public boolean isNew() {
@@ -581,14 +583,14 @@ public class MMObjectNode implements org.mmbase.util.SizeMeasurable, java.io.Ser
                 string = "byte array of size " + ((byte[])fieldValue).length;
             } else {
                 string = Casting.toString(fieldValue);
-                if (string.length() > 200) string = string.substring(0, 200);
+                if (string.length()>200) string = string.substring(0, 200);
             }
             log.debug("Setting " + fieldName + " to " +  string);
         }
 
         boolean changed =
             (! values.containsKey(fieldName)) ||
-            (originalValue == null ? fieldValue != null : ! Casting.equals(originalValue, fieldValue));
+            (originalValue == null ? fieldValue != null : ! originalValue.equals(fieldValue));
         if (! changed) return false;
 
         if (log.isDebugEnabled()) {
@@ -598,24 +600,20 @@ public class MMObjectNode implements org.mmbase.util.SizeMeasurable, java.io.Ser
         //store the old value
         storeOldValue(fieldName, originalValue);
 
+
         // put the key/value in the value hashtable
         storeValue(fieldName, fieldValue);
-        if (fieldValue instanceof byte[]) {
-            setSize(fieldName, ((byte[]) fieldValue).length);
-            log.debug("Setting length to " + ((byte[]) fieldValue).length);
-        }
 
         // process the changed value (?)
         if (parent != null) {
             if(!parent.setValue(this, fieldName, originalValue)) {
-                log.debug("setValue of parent returned false, no update needed...");
+                // setValue of parent returned false, no update needed...
                 return false;
             }
         } else {
             log.error("parent was null for node with number" + getNumber());
         }
         setUpdate(fieldName);
-        log.debug("" + sequence + getChanged());
         return true;
     }
 
@@ -626,7 +624,7 @@ public class MMObjectNode implements org.mmbase.util.SizeMeasurable, java.io.Ser
      * @since MMBase-1.8
      */
     public void setSize(String fieldName, long size) {
-        sizes.put(fieldName, size);
+        sizes.put(fieldName, new Long(size));
     }
     /**
      * Returns the size (in byte) of the given field. This is mainly targeted at fields of the type
@@ -636,8 +634,8 @@ public class MMObjectNode implements org.mmbase.util.SizeMeasurable, java.io.Ser
      * @since MMBase-1.8
      */
     public long getSize(String fieldName) {
-        Long l = sizes.get(fieldName);
-        if (l != null)  return l;
+        Long l = (Long) sizes.get(fieldName);
+        if (l != null)  return l.intValue();
         Object value = values.get(fieldName);
         // Value is null so it does not occupy any space.
         if (value == null) {
@@ -649,6 +647,59 @@ public class MMObjectNode implements org.mmbase.util.SizeMeasurable, java.io.Ser
         return SizeOf.getByteSize(value);
     }
 
+    /**
+     * Sets a key/value pair in the main values of this node. The value to set is of type <code>boolean</code>.
+     * Note that if this node is a node in cache, the changes are immediately visible to
+     * everyone, even if the changes are not committed.
+     * The fieldName is added to the (public) 'changed' vector to track changes.
+     * @param fieldName the name of the field to change
+     * @param fieldValue the value to assign
+     * @return always <code>true</code>
+     */
+    public boolean setValue(String fieldName, boolean fieldValue) {
+        return setValue(fieldName, Boolean.valueOf(fieldValue));
+    }
+
+    /**
+     *  Sets a key/value pair in the main values of this node. The value to set is of type <code>int</code>.
+     *  Note that if this node is a node in cache, the changes are immediately visible to
+     *  everyone, even if the changes are not committed.
+     *  The fieldName is added to the (public) 'changed' vector to track changes.
+     *  @param fieldName the name of the field to change
+     *  @param fieldValue the value to assign
+     *  @return always <code>true</code>
+     */
+    public boolean setValue(String fieldName, int fieldValue) {
+        return setValue(fieldName, new Integer(fieldValue));
+    }
+
+    /**
+     *  Sets a key/value pair in the main values of this node. The value to set is of type <code>int</code>.
+     *  Note that if this node is a node in cache, the changes are immediately visible to
+     *  everyone, even if the changes are not committed.
+     *  The fieldName is added to the (public) 'changed' vector to track changes.
+     *  @param fieldName the name of the field to change
+     *  @param fieldValue the value to assign
+     *  @return always <code>true</code>
+     */
+    public boolean setValue(String fieldName, long fieldValue) {
+        return setValue(fieldName, new Long(fieldValue));
+    }
+
+    /**
+     *  Sets a key/value pair in the main values of this node. The value to set is of type <code>double</code>.
+     *  Note that if this node is a node in cache, the changes are immediately visible to
+     *  everyone, even if the changes are not committed.
+     *  The fieldName is added to the (public) 'changed' vector to track changes.
+     *  @param fieldName the name of the field to change
+     *  @param fieldValue the value to assign
+     *  @return always <code>true</code>
+     */
+    public boolean setValue(String fieldName, double fieldValue) {
+        return setValue(fieldName, new Double(fieldValue));
+    }
+
+
     // Add the field to update to the changed Vector
     //
     private void setUpdate(String fieldName) {
@@ -658,13 +709,10 @@ public class MMObjectNode implements org.mmbase.util.SizeMeasurable, java.io.Ser
         // add it to the changed vector so we know that we have to update it
         // on the next commit
         if (! initializing && state != Field.STATE_VIRTUAL) {
-            log.trace("Marking '" + fieldName + "' as changed in " + sequence);
             changed.add(fieldName);
         }
         // is it a memory only field ? then send a fieldchange
-        if (state == 0) {
-            sendFieldChangeSignal(fieldName);
-        }
+        if (state == 0) sendFieldChangeSignal(fieldName);
     }
 
     /**
@@ -684,6 +732,7 @@ public class MMObjectNode implements org.mmbase.util.SizeMeasurable, java.io.Ser
     public int getOType() {
         return Casting.toInt(values.get(MMObjectBuilder.FIELD_OBJECT_TYPE));
     }
+
 
     /**
      * @since MMBase-1.8
@@ -708,8 +757,11 @@ public class MMObjectNode implements org.mmbase.util.SizeMeasurable, java.io.Ser
         }
     }
 
+
+
     /**
      * Get a value of a certain field.
+     * @performance do not store byte values directly in node (?)
      * @param fieldName the name of the field who's data to return
      * @return the field's value as an <code>Object</code>
      */
@@ -750,7 +802,6 @@ public class MMObjectNode implements org.mmbase.util.SizeMeasurable, java.io.Ser
             if(doc != null) {
                 // store the document inside the field.. much faster...
                 value = doc;
-                value = checkSerializable(fieldName, value);
                 values.put(fieldName, value);
             } else {
                 values.put(fieldName, null);
@@ -777,6 +828,7 @@ public class MMObjectNode implements org.mmbase.util.SizeMeasurable, java.io.Ser
         return value;
     }
 
+
     /**
      * Get a value of a certain field.  The value is returned as a
      * String. Non-string values are automatically converted to
@@ -796,7 +848,7 @@ public class MMObjectNode implements org.mmbase.util.SizeMeasurable, java.io.Ser
      * @javadoc
      * @since MMBase-1.6
      */
-    public Object getFunctionValue(String functionName, List<?> parameters) {
+    public Object getFunctionValue(String functionName, List parameters) {
         return parent.getFunctionValue(this, functionName, parameters);
     }
 
@@ -812,7 +864,7 @@ public class MMObjectNode implements org.mmbase.util.SizeMeasurable, java.io.Ser
      * @javadoc
      * @since MMBase-1.8
      */
-    public Function<?> getFunction(String functionName) {
+    public Function getFunction(String functionName) {
         return parent.getFunction(this, functionName);
     }
 
@@ -820,7 +872,7 @@ public class MMObjectNode implements org.mmbase.util.SizeMeasurable, java.io.Ser
      * @javadoc
      * @since MMBase-1.8
      */
-    public Collection<Function<?>> getFunctions() {
+    public Collection getFunctions() {
         return parent.getFunctions(this);
     }
 
@@ -843,12 +895,24 @@ public class MMObjectNode implements org.mmbase.util.SizeMeasurable, java.io.Ser
         return o;
     }
 
+
     /**
      * If the values map contains an InputStream, care must be taken because often an InputStream can be used only once.
      * @since MMBase-1.8
      */
     private byte[] useInputStream(String fieldName, InputStream stream) {        // first, convert to byte-array
-        byte[] b = SerializableInputStream.toByteArray(stream);
+        ByteArrayOutputStream bos = new ByteArrayOutputStream();
+        int c;
+        try {
+            byte[] buf = new byte[1024];
+            int n;
+            while ((n = stream.read(buf)) > -1) {
+                bos.write(buf, 0, n);
+            }
+        } catch (IOException ioe) {
+            log.error(ioe);
+        }
+        byte[] b = bos.toByteArray();
         // check if we can cache it.
         BlobCache blobs = parent.getBlobCache(fieldName);
         String key = blobs.getKey(getNumber(), fieldName);
@@ -862,6 +926,7 @@ public class MMObjectNode implements org.mmbase.util.SizeMeasurable, java.io.Ser
 
     /**
      * Get a binary value of a certain field.
+     * @performance do not store byte values directly in node (?)
      * @param fieldName the name of the field who's data to return
      * @return the field's value as an <code>byte []</code> (binary/blob field)
      */
@@ -889,6 +954,7 @@ public class MMObjectNode implements org.mmbase.util.SizeMeasurable, java.io.Ser
         }
     }
 
+
     public InputStream getInputStreamValue(String fieldName) {
         Object value = values.get(fieldName); // don't use getValue here, it'll introduce MMB-1628
         if (value == null) {
@@ -912,7 +978,7 @@ public class MMObjectNode implements org.mmbase.util.SizeMeasurable, java.io.Ser
         if (VALUE_SHORTED.equals(value)) {
             BlobCache blobs = parent.getBlobCache(fieldName);
             String key = blobs.getKey(getNumber(), fieldName);
-           byte[] v;
+            byte[] v;
             if (! blobs.containsKey(key)) {
                 if (getSize(fieldName) < blobs.getMaxEntrySize()) {
                     v = parent.mmb.getStorageManager().getBinaryValue(this, parent.getField(fieldName));
@@ -940,6 +1006,7 @@ public class MMObjectNode implements org.mmbase.util.SizeMeasurable, java.io.Ser
         }
     }
 
+
     /**
      * Get a value of a certain field.
      * The value is returned as an MMObjectNode.
@@ -956,26 +1023,26 @@ public class MMObjectNode implements org.mmbase.util.SizeMeasurable, java.io.Ser
         if (fieldName == null || fieldName.equals(MMObjectBuilder.FIELD_NUMBER)) return this;
         Object value = getValue(fieldName);
         MMObjectNode res = null;
-        if (value instanceof MMObjectNode) {
-            res = (MMObjectNode) value;
-        } else if (value instanceof Node) {
-            Node node = (Node) value;
-            if (node.isNew()) {
-                throw new UnsupportedOperationException("dropped tmpnodemanager...");
-            } else if (value instanceof org.mmbase.bridge.implementation.VirtualNode) {
-                res = new VirtualNode(new org.mmbase.bridge.util.NodeMap(node));
-            } else {
-                res = parent.getNode(node.getNumber());
-            }
-        } else if (value instanceof Number) {
-            int nodenumber = ((Number)value).intValue();
-            if (nodenumber != -1) {
-                res = parent.getNode(nodenumber);
-            }
-        } else if (value != null && !value.equals("")) {
-            res = parent.getNode(value.toString());
-        }
-        return res;
+         if (value instanceof MMObjectNode) {
+             res = (MMObjectNode) value;
+         } else if (value instanceof Node) {
+             Node node = (Node) value;
+             if (node.isNew()) {
+                 throw new UnsupportedOperationException("dropped tmpnodemanager...");
+             } else if (value instanceof org.mmbase.bridge.implementation.VirtualNode) {
+                 res = new VirtualNode(new org.mmbase.bridge.util.NodeMap(node));
+             } else {
+                 res = parent.getNode(node.getNumber());
+              }
+         } else if (value instanceof Number) {
+             int nodenumber = ((Number)value).intValue();
+             if (nodenumber != -1) {
+                 res = parent.getNode(nodenumber);
+             }
+         } else if (value != null && !value.equals("")) {
+             res = parent.getNode(value.toString());
+         }
+         return res;
     }
 
     /**
@@ -1025,7 +1092,7 @@ public class MMObjectNode implements org.mmbase.util.SizeMeasurable, java.io.Ser
      */
     public Integer getIntegerValue(String fieldName) {
         Object value = getValue(fieldName);
-        if (value instanceof MMObjectNode) return ((MMObjectNode)value).getNumber();
+        if (value instanceof MMObjectNode) return new Integer(((MMObjectNode)value).getNumber());
         return Casting.toInteger(value);
     }
 
@@ -1038,9 +1105,10 @@ public class MMObjectNode implements org.mmbase.util.SizeMeasurable, java.io.Ser
      */
     public long getLongValue(String fieldName) {
         Object value = getValue(fieldName);
-        if (value instanceof MMObjectNode) return ((MMObjectNode)value).getNumber();
+        if (value instanceof MMObjectNode) return (long) ((MMObjectNode)value).getNumber();
         return Casting.toLong(value);
     }
+
 
     /**
      * Get a value of a certain field.
@@ -1053,9 +1121,10 @@ public class MMObjectNode implements org.mmbase.util.SizeMeasurable, java.io.Ser
      */
     public float getFloatValue(String fieldName) {
         Object value = getValue(fieldName);
-        if (value instanceof MMObjectNode) return ((MMObjectNode)value).getNumber();
+        if (value instanceof MMObjectNode) return (float) ((MMObjectNode)value).getNumber();
         return Casting.toFloat(value);
     }
+
 
     /**
      * Get a value of a certain field.
@@ -1068,7 +1137,7 @@ public class MMObjectNode implements org.mmbase.util.SizeMeasurable, java.io.Ser
      */
     public double getDoubleValue(String fieldName) {
         Object value = getValue(fieldName);
-        if (value instanceof MMObjectNode) return ((MMObjectNode)value).getNumber();
+        if (value instanceof MMObjectNode) return (double) ((MMObjectNode)value).getNumber();
         return Casting.toDouble(value);
     }
 
@@ -1130,10 +1199,10 @@ public class MMObjectNode implements org.mmbase.util.SizeMeasurable, java.io.Ser
     /**
      * Return the names of all persistent fields that were changed.
      * Note that this is a direct reference. Changes (i.e. clearing the vector) will affect the node's status.
-     * @return An unmodifiable Set containing Strings.
+     * @return A Set containing Strings. The set is modifiable, and synchronized. Don't modify it though.
      */
-    public Set<String> getChanged() {
-        return Collections.unmodifiableSet(changed);
+    public Set getChanged() {
+        return changed;
     }
 
     /**
@@ -1156,6 +1225,7 @@ public class MMObjectNode implements org.mmbase.util.SizeMeasurable, java.io.Ser
         return true;
     }
 
+
     /**
      * Deletes the propertie cache for this node.
      * Forces a reload of the properties on next use.
@@ -1166,48 +1236,38 @@ public class MMObjectNode implements org.mmbase.util.SizeMeasurable, java.io.Ser
         }
     }
 
-    /**
-     * Returns an (unmodifiable) map representing all key/values present in this node.
-     * This can be modified by other users of this object though. You'll need to synchronize on it,
-     * when iterating (see {@link java.util.Collections#synchronizedMap}).
-     */
-    public Map<String, Object> getValues() {
+    public Map getValues() {
         return  Collections.unmodifiableMap(values);
     }
     /**
      * @since MMBase-1.8
      */
-    public Map<String, Object> getOldValues() {
+    public Map getOldValues() {
         return Collections.unmodifiableMap(oldValues);
     }
 
+
+
     /**
-     * Return a the properties for this node. Properties are stored in a dedicated builder
-     * 'properties'. The property values are returned still wrapped in the nodes in that builder.
-     *
-     * @return the properties as an unmodifiable <code>Map</code>
+     * Return a the properties for this node.
+     * @return the properties as a <code>Hashtable</code>
      */
-    public Map<String, MMObjectNode> getProperties() {
+    public Hashtable getProperties() {
         synchronized(properties_sync) {
             if (properties == null) {
-                properties = new HashMap<String,MMObjectNode>();
-                MMObjectBuilder bul = parent.mmb.getBuilder("properties");
-                NodeSearchQuery query = new NodeSearchQuery(bul);
-                StepField parentField = query.getField(bul.getField("parent"));
-                BasicFieldValueConstraint cons = new BasicFieldValueConstraint(parentField, getNumber());
-                query.setConstraint(cons);
-                try {
-                    for (MMObjectNode property : bul.getNodes(query)) {
-                        String key = property.getStringValue("key");
-                        properties.put(key, property);
-                    }
-                } catch (SearchQueryException sqe) {
-                    log.error(sqe.getMessage(), sqe);
+                properties = new Hashtable();
+                MMObjectBuilder bul = parent.mmb.getMMObject("properties");
+                Enumeration e = bul.search("parent=="+getNumber());
+                while (e.hasMoreElements()) {
+                    MMObjectNode pnode = (MMObjectNode)e.nextElement();
+                    String key = pnode.getStringValue("key");
+                    properties.put(key, pnode);
                 }
             }
         }
-        return Collections.unmodifiableMap(properties);
+        return properties;
     }
+
 
     /**
      * Returns a specified property of this node.
@@ -1215,13 +1275,20 @@ public class MMObjectNode implements org.mmbase.util.SizeMeasurable, java.io.Ser
      * @return the property object as a <code>MMObjectNode</code>
      */
     public MMObjectNode getProperty(String key) {
+        MMObjectNode n;
         synchronized(properties_sync) {
             if (properties == null) {
                 getProperties();
             }
-            return properties.get(key);
+            n=(MMObjectNode)properties.get(key);
+        }
+        if (n!=null) {
+            return n;
+        } else {
+            return null;
         }
     }
+
 
     /**
      * Sets a specified property for this node.
@@ -1230,10 +1297,10 @@ public class MMObjectNode implements org.mmbase.util.SizeMeasurable, java.io.Ser
      */
     public void putProperty(MMObjectNode node) {
         synchronized(properties_sync) {
-            if (properties == null) {
+            if (properties==null) {
                 getProperties();
             }
-            properties.put(node.getStringValue("key"), node);
+            properties.put(node.getStringValue("key"),node);
         }
     }
 
@@ -1251,8 +1318,7 @@ public class MMObjectNode implements org.mmbase.util.SizeMeasurable, java.io.Ser
             log.error("MMObjectNode -> can't get parent");
             return "problem";
         }
-        //return "" + getFunctionValue("gui", null); // proposed fix for MMB-1575. No good, it can
-        //cause infinite loops.
+        //return "" + getFunctionValue("gui", null);
     }
 
     /**
@@ -1268,7 +1334,7 @@ public class MMObjectNode implements org.mmbase.util.SizeMeasurable, java.io.Ser
      * This means it will be reloaded from the database/storage on next use.
      */
     public void delRelationsCache() {
-        delRelationsCache(getNumber());
+        delRelationsCache(new Integer(getNumber()));
     }
 
     /**
@@ -1296,8 +1362,8 @@ public class MMObjectNode implements org.mmbase.util.SizeMeasurable, java.io.Ser
      * Note that this returns the nodes describing the relation - not the nodes 'related to'.
      * @return An <code>Enumeration</code> containing the nodes
      */
-    public Enumeration<MMObjectNode> getAllRelations() {
-        Vector<MMObjectNode> allrelations=parent.mmb.getInsRel().getAllRelationsVector(getNumber());
+    public Enumeration getAllRelations() {
+        Vector allrelations=parent.mmb.getInsRel().getAllRelationsVector(getNumber());
         if (allrelations!=null) {
             return allrelations.elements();
         } else {
@@ -1314,8 +1380,8 @@ public class MMObjectNode implements org.mmbase.util.SizeMeasurable, java.io.Ser
      *
      * @return An <code>Enumeration</code> containing the nodes
      */
-    public Enumeration<MMObjectNode> getRelations() {
-        List<MMObjectNode> relations = getRelationNodes();
+    public Enumeration getRelations() {
+        List relations = getRelationNodes();
         if (relations != null) {
             return Collections.enumeration(relations);
         } else {
@@ -1327,16 +1393,16 @@ public class MMObjectNode implements org.mmbase.util.SizeMeasurable, java.io.Ser
      * @since MMBase-1.7
      * @scope public?
      */
-    protected List<MMObjectNode> getRelationNodes() {
-        Integer number = Integer.valueOf(getNumber());
-        List<MMObjectNode> relations;
+    protected List getRelationNodes() {
+        Integer number = new Integer(getNumber());
+        List relations;
         RelationsCache relationsCache = RelationsCache.getCache();
         if (! relationsCache.contains(number)) {
             relations = parent.getRelations_main(getNumber());
             relationsCache.put(number, relations);
 
         } else {
-            relations = relationsCache.get(number);
+            relations = (List) relationsCache.get(number);
         }
         return relations;
     }
@@ -1353,7 +1419,7 @@ public class MMObjectNode implements org.mmbase.util.SizeMeasurable, java.io.Ser
      * @return An <code>int</code> indicating the number of nodes found
      */
     public int getRelationCount() {
-        List<MMObjectNode> relations = getRelationNodes();
+        List relations = getRelationNodes();
         if (relations!=null) {
             return relations.size();
         } else {
@@ -1361,18 +1427,19 @@ public class MMObjectNode implements org.mmbase.util.SizeMeasurable, java.io.Ser
         }
     }
 
+
     /**
      * Return the relations of this node, filtered on a specified type.
      * Note that this returns the nodes describing the relation - not the nodes 'related to'.
      * @param otype the 'type' of relations to return. The type identifies a relation (InsRel-derived) builder, not a reldef object.
      * @return An <code>Enumeration</code> containing the nodes
      */
-    public Enumeration<MMObjectNode> getRelations(int otype) {
-        Enumeration<MMObjectNode> e = getRelations();
-        Vector<MMObjectNode> result=new Vector<MMObjectNode>();
+    public Enumeration getRelations(int otype) {
+        Enumeration e = getRelations();
+        Vector result=new Vector();
         if (e!=null) {
             while (e.hasMoreElements()) {
-                MMObjectNode tnode = e.nextElement();
+                MMObjectNode tnode=(MMObjectNode)e.nextElement();
                 if (tnode.getOType()==otype) {
                     result.addElement(tnode);
                 }
@@ -1387,7 +1454,7 @@ public class MMObjectNode implements org.mmbase.util.SizeMeasurable, java.io.Ser
      * @param wantedtype the 'type' of relations to return. The type identifies a relation (InsRel-derived) builder, not a reldef object.
      * @return An <code>Enumeration</code> containing the nodes
      */
-    public Enumeration<MMObjectNode> getRelations(String wantedtype) {
+    public Enumeration getRelations(String wantedtype) {
         int otype=parent.mmb.getTypeDef().getIntValue(wantedtype);
         if (otype!=-1) {
             return getRelations(otype);
@@ -1404,10 +1471,10 @@ public class MMObjectNode implements org.mmbase.util.SizeMeasurable, java.io.Ser
         int count = 0;
         MMObjectBuilder wantedType = parent.mmb.getBuilder(wt);
         if (wantedType != null) {
-            List<MMObjectNode> relations = getRelationNodes();
+            List relations = getRelationNodes();
             if (relations != null) {
-                for(Enumeration<MMObjectNode> e= Collections.enumeration(relations); e.hasMoreElements();) {
-                    MMObjectNode tnode = e.nextElement();
+                for(Enumeration e= Collections.enumeration(relations); e.hasMoreElements();) {
+                    MMObjectNode tnode=(MMObjectNode)e.nextElement();
                     int relation_number =tnode.getIntValue("snumber");
                     int nodetype =0;
 
@@ -1439,6 +1506,7 @@ public class MMObjectNode implements org.mmbase.util.SizeMeasurable, java.io.Ser
         return count;
     }
 
+
     /**
      * Return the age of the node, determined using the daymarks builder.
      * @return the age in days, or 0 if unknown (daymarks builder not present)
@@ -1455,23 +1523,26 @@ public class MMObjectNode implements org.mmbase.util.SizeMeasurable, java.io.Ser
      * @return always <code>true</code>
      */
     public boolean sendFieldChangeSignal(String fieldName) {
-        return parent.sendFieldChangeSignal(this, fieldName);
+        return parent.sendFieldChangeSignal(this,fieldName);
     }
 
     /**
      * Sets the node's alias.
      * The code only sets a (memory) property, it does not actually add the alias to the database.
-     * Only works for un-inserted Nodes. So this is actually only used for application import.
-     * No need to use this. Use {@link MMObjectBuilder#createAlias(int, String)}.
+     * Only works for uninserted Nodes. So this is actually only used for application import.
+     * No need to use this. Use {@link MMObjectBuilder#createAlias}.
      */
     public void setAlias(String alias) {
-        if (aliases == null) aliases = new HashSet<String>();
+        if (aliases == null) aliases = new HashSet();
         synchronized(aliases) {
             aliases.add(alias);
         }
     }
 
     /**
+     * Returns the node's alias.
+     * Does not support multiple aliases.
+     * @return the new aliases as a <code>Set</code>
      */
     void useAliases() {
         if (aliases != null) {
@@ -1480,8 +1551,10 @@ public class MMObjectNode implements org.mmbase.util.SizeMeasurable, java.io.Ser
                     log.error("Trying to set aliases for uncommited node!!");
                     return;
                 }
-                for (String alias : aliases) {
+                Iterator it = aliases.iterator();
+                while(it.hasNext()) {
                     try {
+                        String alias = (String) it.next();
                         parent.createAlias(getNumber(), alias, getStringValue("owner"));
                     } catch (org.mmbase.storage.StorageException se) {
                         log.error(se);
@@ -1492,6 +1565,7 @@ public class MMObjectNode implements org.mmbase.util.SizeMeasurable, java.io.Ser
         }
     }
 
+
     /**
      * Get all related nodes. The returned nodes are not the
      * nodes directly attached to this node (the relation nodes) but the nodes
@@ -1501,21 +1575,24 @@ public class MMObjectNode implements org.mmbase.util.SizeMeasurable, java.io.Ser
      *
      * @return a <code>Vector</code> containing <code>MMObjectNode</code>s
      */
-    public Vector<MMObjectNode> getRelatedNodes() {
+    public Vector getRelatedNodes() {
         return getRelatedNodes("object", null, RelationStep.DIRECTIONS_EITHER);
     }
 
     /**
-     * Makes number -> MMObjectNode of a list of MMObjectNodes.
+     * Makes number -> MMObjectNode of a vector of MMObjectNodes.
      * @since MMBase-1.6.2
      */
-    private Map<Integer, MMObjectNode>  makeMap(List<MMObjectNode> v) {
-        Map<Integer, MMObjectNode>     result = new HashMap<Integer, MMObjectNode>();
-        for (MMObjectNode node : v) {
-            result.put(node.getNumber(), node);
+    private Map makeMap(List v) {
+        Map       result = new HashMap();
+        Iterator  i      = v.iterator();
+        while(i.hasNext()) {
+            MMObjectNode node = (MMObjectNode) i.next();
+            result.put(node.getStringValue(MMObjectBuilder.FIELD_NUMBER), node);
         }
         return result;
     }
+
 
     /**
      * Get the related nodes of a certain type. The returned nodes are not the
@@ -1527,7 +1604,7 @@ public class MMObjectNode implements org.mmbase.util.SizeMeasurable, java.io.Ser
      * @param type the type of objects to be returned
      * @return a <code>Vector</code> containing <code>MMObjectNode</code>s
      */
-    public Vector<MMObjectNode> getRelatedNodes(String type) {
+    public Vector getRelatedNodes(String type) {
         if (log.isDebugEnabled()) {
             log.debug("Getting related nodes of " + this + " of type " + type);
         }
@@ -1537,15 +1614,15 @@ public class MMObjectNode implements org.mmbase.util.SizeMeasurable, java.io.Ser
         } else {
             //
             // determine related nodes
-            Map<Integer, MMObjectNode> source = makeMap(getRelatedNodes(type, RelationStep.DIRECTIONS_SOURCE));
-            Map<Integer, MMObjectNode> destin = makeMap(getRelatedNodes(type, RelationStep.DIRECTIONS_DESTINATION));
+            Map source = makeMap(getRelatedNodes(type, RelationStep.DIRECTIONS_SOURCE));
+            Map destin = makeMap(getRelatedNodes(type, RelationStep.DIRECTIONS_DESTINATION));
 
             if (log.isDebugEnabled()) {
                 log.debug("source("+source.size()+") - destin("+destin.size()+")");
             }
             // remove duplicates (can happen if multirel is being used when no dir on insrel exists)
             destin.putAll(source);
-            return new Vector<MMObjectNode>(destin.values());
+            return new Vector(destin.values());
         }
     }
 
@@ -1560,7 +1637,7 @@ public class MMObjectNode implements org.mmbase.util.SizeMeasurable, java.io.Ser
      * @param search_type the type of directionality to use
      * @since MMBase-1.6.3
      */
-    public Vector<MMObjectNode> getRelatedNodes(String type, int search_type) {
+    public Vector getRelatedNodes(String type, int search_type) {
         return getRelatedNodes(type, "insrel",  search_type);
     }
 
@@ -1576,8 +1653,8 @@ public class MMObjectNode implements org.mmbase.util.SizeMeasurable, java.io.Ser
      * @param search_type the type of directionality to use
      * @since MMBase-1.6.3
      */
-    public Vector<MMObjectNode> getRelatedNodes(String type, String role, int search_type) {
-        Vector<MMObjectNode> result = null;
+    public Vector getRelatedNodes(String type, String role, int search_type) {
+        Vector result = null;
 
         MMObjectBuilder builder = parent.mmb.getBuilder(type);
 
@@ -1589,12 +1666,15 @@ public class MMObjectNode implements org.mmbase.util.SizeMeasurable, java.io.Ser
         //   (this will return virtual audio- and/or videoparts ordered on their *real* parent)
         // - construct a list of nodes for each parentbuilder seperately
         // - ask the parentbuilder for each list of virtual nodes to get a list of the real nodes
+
+
         if( builder != null ) {
 
             ClusterBuilder clusterBuilder = parent.mmb.getClusterBuilder();
 
+
             // multilevel from table this.parent.name -> type
-            List<String> tables = new ArrayList<String>();
+            List tables = new ArrayList();
             tables.add(parent.getTableName() + "1");
             if (role != null) {
                 tables.add(role);
@@ -1602,24 +1682,25 @@ public class MMObjectNode implements org.mmbase.util.SizeMeasurable, java.io.Ser
             tables.add(type + "2");
 
             // return type.number (and otype for sorting)
-            List<String> fields = new ArrayList<String>();
+            List fields = new ArrayList();
             fields.add(type + "2.number");
             fields.add(type + "2.otype");
 
             // order list UP
-            List<String> directions = new ArrayList<String>();
+            List directions = new ArrayList();
             directions.add("UP");
 
             // and order on otype
-            List<String> ordered = new ArrayList<String>();
+            List ordered = new ArrayList();
             ordered.add(type + "2.otype");
 
-            List<String> snodes = new ArrayList<String>();
+            List snodes = new ArrayList();
             snodes.add("" + getNumber());
 
             SearchQuery query = clusterBuilder.getMultiLevelSearchQuery(snodes, fields, "NO", tables,  null, ordered, directions, search_type);
+
             RelatedNodesCache relatedCache = RelatedNodesCache.getCache();
-            List<MMObjectNode> v = relatedCache.get(query);
+            List v = (List) relatedCache.get(query);
             if (v == null) {
                 try {
                     v = clusterBuilder.getClusterNodesFromQueryHandler(query);
@@ -1630,13 +1711,13 @@ public class MMObjectNode implements org.mmbase.util.SizeMeasurable, java.io.Ser
                 }
             }
             if(v == null) {
-                result = new Vector<MMObjectNode>();
+                result = new Vector();
             } else {
-                result = new Vector<MMObjectNode>(getRealNodes(v, type + "2"));
+                result = new Vector(getRealNodes(v, type + "2"));
             }
         } else {
             log.error("This type(" + type + ") is not a valid buildername!");
-            result = new Vector<MMObjectNode>(); // return empty vector
+            result = new Vector(); // return empty vector
         }
 
         if (log.isDebugEnabled()) {
@@ -1649,38 +1730,42 @@ public class MMObjectNode implements org.mmbase.util.SizeMeasurable, java.io.Ser
     /**
      * Loop through the virtuals vector, group all same nodes based on parent and fetch the real nodes from those parents
      *
-     * @param virtuals  of virtual nodes (only type.number and type.otype fields are set)
-     * @param type needed to retreive the otype, which is set in node as type + ".otype"
+     * @param List  of virtual nodes (only type.number and type.otype fields are set)
+     * @param type, needed to retreive the otype, which is set in node as type + ".otype"
      * @returns List of real nodes
      *
-     * @see #getRelatedNodes(String type)
+     * @see getRelatedNodes(String type)
      * @since MMBase-1.6.2
      */
-    private List<MMObjectNode> getRealNodes(List<MMObjectNode> virtuals, String type) {
+    private List getRealNodes(List virtuals, String type) {
 
         log.debug("Getting real nodes");
-        List<MMObjectNode> result  = new ArrayList<MMObjectNode>();
+        List            result  = new ArrayList();
 
-        List<MMObjectNode> list    = new ArrayList<MMObjectNode>();
+        MMObjectNode    node    = null;
+        MMObjectNode    convert = null;
+        Iterator     i       = virtuals.iterator();
+        List            list    = new ArrayList();
+        int             otype   = -1;
         int             ootype  = -1;
-        List <Integer> virtualNumbers = new ArrayList<Integer>();
+
+        List virtualNumbers = new ArrayList();
 
         // fill the list
-        Iterator<MMObjectNode> i = virtuals.iterator();
-        while (i.hasNext()) {
-            MMObjectNode node = i.next();
+        while(i.hasNext()) {
+            node    = (MMObjectNode)i.next();
             Integer number = node.getIntegerValue(type + ".number");
             if (!virtualNumbers.contains(number)) {
                 virtualNumbers.add(number);
 
-                int otype   = node.getIntValue(type + ".otype");
+                otype   = node.getIntValue(type + ".otype");
 
                 // convert the nodes of type ootype to real numbers
                 if(otype != ootype) {
                     // if we have nodes return real values
                     if(ootype != -1) {
                         result.addAll(getRealNodesFromBuilder(list, ootype));
-                        list = new ArrayList<MMObjectNode>();
+                        list = new ArrayList();
                     }
                     ootype  = otype;
                 }
@@ -1692,7 +1777,7 @@ public class MMObjectNode implements org.mmbase.util.SizeMeasurable, java.io.Ser
                     otype = parent.mmb.getBuilder(builderName).getObjectType();
                 }
 
-                MMObjectNode convert = new MMObjectNode(parent.mmb.getBuilder(builderName), false);
+                convert = new MMObjectNode(parent.mmb.getBuilder(builderName), false);
                 // parent needs to be set or else mmbase does nag nag nag on a setValue()
                 convert.setValue(MMObjectBuilder.FIELD_NUMBER, node.getValue(type + ".number"));
                 convert.setValue(MMObjectBuilder.FIELD_OBJECT_TYPE, ootype);
@@ -1701,7 +1786,7 @@ public class MMObjectNode implements org.mmbase.util.SizeMeasurable, java.io.Ser
             // first and only list or last list, return real values
             if(!i.hasNext()) {
                 // log.debug("subconverting last "+list.size()+" nodes of type("+otype+")");
-                result.addAll(getRealNodesFromBuilder(list, ootype));
+                result.addAll(getRealNodesFromBuilder(list, otype));
             }
         }
 
@@ -1715,7 +1800,7 @@ public class MMObjectNode implements org.mmbase.util.SizeMeasurable, java.io.Ser
             log.error("Virtual node numbers: " + vNumbers.toString());
             StringBuffer rNumbers = new StringBuffer();
             for (int j = 0; j < result.size(); j++) {
-                int resultNumber = (result.get(j)).getIntValue("number");
+                int resultNumber = ((MMObjectNode) result.get(j)).getIntValue("number");
                 rNumbers.append(resultNumber).append(" ");
             }
             log.error("Real node numbers: " + rNumbers.toString());
@@ -1728,8 +1813,8 @@ public class MMObjectNode implements org.mmbase.util.SizeMeasurable, java.io.Ser
      * Upgrade a certain list of MMObectNodes to the right type.
      * @since MMBase-1.6.2
      */
-    private List<MMObjectNode> getRealNodesFromBuilder(List<MMObjectNode> list, int otype) {
-        List<MMObjectNode> result = new ArrayList<MMObjectNode>();
+    private List getRealNodesFromBuilder(List list, int otype) {
+        List result = new ArrayList();
         String name = parent.mmb.getTypeDef().getValue(otype);
         if(name != null) {
             MMObjectBuilder rparent = parent.mmb.getBuilder(name);
@@ -1739,23 +1824,26 @@ public class MMObjectNode implements org.mmbase.util.SizeMeasurable, java.io.Ser
                 log.error("This otype(" + otype + ") does not denote a valid typedef-name(" + name + ")!");
             }
         } else {
-            log.error("This otype(" + otype + ") gives no name from typedef!");
+            log.error("This otype(" + otype + ") gives no name(" + name + ") from typedef!");
         }
         return result;
     }
+
 
     public int getByteSize() {
         return getByteSize(new SizeOf());
     }
 
     public int getByteSize(SizeOf sizeof) {
-        return sizeof.sizeof(values) +
+        return
+            sizeof.sizeof(values) +
             sizeof.sizeof(oldValues) +
             sizeof.sizeof(sizes) +
             sizeof.sizeof(properties) +
             sizeof.sizeof(changed) +
             12 * SizeOf.SZ_REF;
     }
+
 
     /**
      * @since MMBase-1.6.2
@@ -1834,14 +1922,13 @@ public class MMObjectNode implements org.mmbase.util.SizeMeasurable, java.io.Ser
      * be recovered using that name.
      * @since MMBase-1.8.0
      */
-    @SuppressWarnings("unchecked")
     private void readObject(java.io.ObjectInputStream in) throws IOException, ClassNotFoundException {
-        oldValues = (Map<String, Object>) in.readObject();
-        values = (Map<String, Object>) in.readObject();
-        sizes = (Map<String, Long>) in.readObject();
+        oldValues = (Map)in.readObject();
+        values = (Map)in.readObject();
+        sizes = (Map)in.readObject();
         initializing = in.readBoolean();
-        properties = (Hashtable<String,MMObjectNode>) in.readObject();
-        changed = (Set<String>)in.readObject();
+        properties = (Hashtable)in.readObject();
+        changed = (Set)in.readObject();
 
         // Retrieve parent and builder by name, not by object
         String parentName = (String)in.readObject();
@@ -1853,11 +1940,7 @@ public class MMObjectNode implements org.mmbase.util.SizeMeasurable, java.io.Ser
             builder = MMBase.getMMBase().getBuilder(builderName);
         }
         isNew = in.readBoolean();
-        aliases = (Set<String>)in.readObject();
+        aliases = (Set)in.readObject();
         newContext = (String)in.readObject();
-    }
-
-    public int compareTo(MMObjectNode n) {
-        return getNumber() - n.getNumber();
     }
 }
