@@ -10,15 +10,15 @@ package org.mmbase.storage.search.implementation.database;
 
 import java.sql.*;
 import java.util.*;
+import javax.sql.DataSource;
 
-import org.mmbase.cache.*;
-import org.mmbase.bridge.Field;
+import org.mmbase.cache.NodeCache;
+import org.mmbase.cache.Cache;
 import org.mmbase.bridge.NodeManager;
 import org.mmbase.core.CoreField;
 import org.mmbase.module.core.*;
 import org.mmbase.storage.implementation.database.DatabaseStorageManager;
 import org.mmbase.storage.implementation.database.DatabaseStorageManagerFactory;
-import org.mmbase.storage.implementation.database.ResultSetReader;
 import org.mmbase.storage.search.*;
 import org.mmbase.util.logging.*;
 import org.mmbase.storage.search.implementation.ModifiableQuery;
@@ -33,7 +33,7 @@ import org.mmbase.storage.search.implementation.ModifiableQuery;
  * by the handler, and in this form executed on the database.
  *
  * @author Rob van Maris
- * @version $Id: BasicQueryHandler.java,v 1.65 2009-01-30 20:06:46 michiel Exp $
+ * @version $Id: BasicQueryHandler.java,v 1.52.2.1 2007-10-22 08:42:47 nklasens Exp $
  * @since MMBase-1.7
  */
 public class BasicQueryHandler implements SearchQueryHandler {
@@ -45,9 +45,10 @@ public class BasicQueryHandler implements SearchQueryHandler {
     private static final Logger log = Logging.getLoggerInstance(BasicQueryHandler.class);
 
     /** Sql handler used to generate SQL statements. */
-    private final SqlHandler sqlHandler;
+    private SqlHandler sqlHandler = null;
 
-    private final MMBase mmbase;
+    /** MMBase instance. */
+    private MMBase mmbase = null;
 
     /**
      * Default constructor.
@@ -62,60 +63,94 @@ public class BasicQueryHandler implements SearchQueryHandler {
 
 
     // javadoc is inherited
-    public List<MMObjectNode> getNodes(final SearchQuery query, final MMObjectBuilder builder) throws SearchQueryException {
+    public List getNodes(SearchQuery query, MMObjectBuilder builder) throws SearchQueryException {
 
-        final List<MMObjectNode> results = new ArrayList<MMObjectNode>();
-        // Flag, set if offset must be supported by skipping results.
-        final boolean mustSkipResults =
-            (query.getOffset() != SearchQuery.DEFAULT_OFFSET) &&
-            (sqlHandler.getSupportLevel(SearchQueryHandler.FEATURE_OFFSET, query) == SearchQueryHandler.SUPPORT_NONE);
+        List results;
+        Connection con = null;
+        Statement stmt = null;
+        String sqlString = null;
 
-
-        // Flag, set if sql handler supports maxnumber.
-        final boolean sqlHandlerSupportsMaxNumber = sqlHandler.getSupportLevel(SearchQueryHandler.FEATURE_MAX_NUMBER, query) != SearchQueryHandler.SUPPORT_NONE;
-
-        // report about offset and max support (for debug purposes)
-        if (log.isDebugEnabled()) {
-            log.debug("Database offset support = " + (sqlHandler.getSupportLevel(SearchQueryHandler.FEATURE_OFFSET, query) != SearchQueryHandler.SUPPORT_NONE));
-            log.debug("mustSkipResults = " + mustSkipResults);
-            log.debug("Database max support = " + sqlHandlerSupportsMaxNumber);
-        }
-
-        String sqlString = createSqlString(query, mustSkipResults, sqlHandlerSupportsMaxNumber);
-        if (log.isDebugEnabled()) {
-            log.debug("sql: " + sqlString);
-        }
-
-        final DatabaseStorageManager manager = ((DatabaseStorageManagerFactory) mmbase.getStorageManagerFactory()).getStorageManager();
         try {
-            manager.executeQuery(sqlString, new ResultSetReader() {
-                    public void read(ResultSet rs) throws SQLException {
-                        if (mustSkipResults) {
-                            log.debug("skipping results, to provide weak support for offset");
-                            for (int i = 0; i < query.getOffset(); i++) {
-                                rs.next();
-                            }
-                        }
+            // Flag, set if offset must be supported by skipping results.
+            boolean mustSkipResults =
+                (query.getOffset() != SearchQuery.DEFAULT_OFFSET) &&
+                (sqlHandler.getSupportLevel(SearchQueryHandler.FEATURE_OFFSET, query) == SearchQueryHandler.SUPPORT_NONE);
 
-                        // Now store results as cluster-/real nodes.
-                        StepField[] fields = query.getFields().toArray(STEP_FIELD_ARRAY);
-                        int maxNumber = query.getMaxNumber();
 
-                        // now, we dispatch the reading of the result set to the right function wich instantiates Nodes of the right type.
-                        if (builder instanceof ClusterBuilder) {
-                            readNodes(results, manager, (ClusterBuilder) builder, fields, rs, sqlHandlerSupportsMaxNumber, maxNumber, query.getSteps().size());
-                        } else if (builder instanceof ResultBuilder) {
-                            readNodes(results, manager, (ResultBuilder) builder, fields, rs, sqlHandlerSupportsMaxNumber, maxNumber);
-                        } else {
-                            readNodes(results, manager, builder, fields, rs, sqlHandlerSupportsMaxNumber, maxNumber);
-                        }
+            // Flag, set if sql handler supports maxnumber.
+            boolean sqlHandlerSupportsMaxNumber = sqlHandler.getSupportLevel(SearchQueryHandler.FEATURE_MAX_NUMBER, query) != SearchQueryHandler.SUPPORT_NONE;
+
+            // report about offset and max support (for debug purposes)
+            if (log.isDebugEnabled()) {
+                log.debug("Database offset support = " + (sqlHandler.getSupportLevel(SearchQueryHandler.FEATURE_OFFSET, query) != SearchQueryHandler.SUPPORT_NONE));
+                log.debug("mustSkipResults = " + mustSkipResults);
+                log.debug("Database max support = " + sqlHandlerSupportsMaxNumber);
+            }
+
+            sqlString = createSqlString(query, mustSkipResults, sqlHandlerSupportsMaxNumber);
+
+            log.debug("sql: " + sqlString);
+            
+            // Execute the SQL... ARGH !!! Has to move!
+            // get connection...
+            DataSource dataSource = ((DatabaseStorageManagerFactory) mmbase.getStorageManagerFactory()).getDataSource();
+            con = dataSource.getConnection();
+            stmt = con.createStatement();
+            ResultSet rs = stmt.executeQuery(sqlString);
+
+            try {
+                if (mustSkipResults) {
+                    log.debug("skipping results, to provide weak support for offset");
+                    for (int i = 0; i < query.getOffset(); i++) {
+                        rs.next();
                     }
-                });
+                }
+
+                // Now store results as cluster-/real nodes.
+                StepField[] fields = (StepField[]) query.getFields().toArray(STEP_FIELD_ARRAY);
+                int maxNumber = query.getMaxNumber();
+
+                // now, we dispatch the reading of the result set to the right function wich instantiates Nodes of the right type.
+                if (builder instanceof ClusterBuilder) {
+                    results = readNodes((ClusterBuilder) builder, fields, rs, sqlHandlerSupportsMaxNumber, maxNumber, query.getSteps().size());
+                } else if (builder instanceof ResultBuilder) {
+                    results = readNodes((ResultBuilder) builder, fields, rs, sqlHandlerSupportsMaxNumber, maxNumber);
+                } else {
+                    results = readNodes(builder, fields, rs, sqlHandlerSupportsMaxNumber, maxNumber);
+                }
+            } finally {
+                rs.close();
+            }
         } catch (SQLException e) {
+            // Something went wrong, log exception
+            // and rethrow as SearchQueryException.
+            if (log.isDebugEnabled()) {
+                log.debug("Query failed:" + query + "\n" + e + Logging.stackTrace(e));
+            }
             throw new SearchQueryException("Query '" + (sqlString == null ? "" + query.toString() : sqlString)  + "' failed: " + e.getClass().getName() + ": " + e.getMessage(), e);
+        } finally {
+            closeConnection(con, stmt);
         }
 
         return results;
+    }
+
+    /**
+     * Safely close a database connection and/or a database statement.
+     * @param con The connection to close. Can be <code>null</code>.
+     * @param stmt The statement to close, prior to closing the connection. Can be <code>null</code>.
+     */
+    protected void closeConnection(Connection con, Statement stmt) {
+        try {
+            if (stmt != null) {
+                stmt.close();
+            }
+        } catch (Exception g) {}
+        try {
+            if (con != null) {
+                con.close();
+            }
+        } catch (Exception g) {}
     }
 
     /**
@@ -145,6 +180,7 @@ public class BasicQueryHandler implements SearchQueryHandler {
         return createSqlString(query, mustSkipResults, sqlHandlerSupportsMaxNumber);
     }
 
+    
     /**
      * Makes a String of a query, taking into consideration if the database supports offset and
      * maxnumber features. The resulting String is an SQL query which can be fed to the database.
@@ -194,11 +230,11 @@ public class BasicQueryHandler implements SearchQueryHandler {
     /**
      * Read the result list and creates a List of ClusterNodes.
      */
-    private List<MMObjectNode> readNodes(List<MMObjectNode> results,
-                                         DatabaseStorageManager storageManager,
-                                         ClusterBuilder builder, StepField[] fields, ResultSet rs,
-                                         boolean sqlHandlerSupportsMaxNumber, int maxNumber, int numberOfSteps) {
+    private List readNodes(ClusterBuilder builder, StepField[] fields, ResultSet rs, boolean sqlHandlerSupportsMaxNumber, int maxNumber, int numberOfSteps) throws SQLException {
+        List results = new ArrayList();
+        DatabaseStorageManager storageManager = (DatabaseStorageManager)mmbase.getStorageManager();
 
+        boolean storesAsFile = builder.getMMBase().getStorageManagerFactory().hasOption(org.mmbase.storage.implementation.database.Attributes.STORES_BINARY_AS_FILE);
         // Truncate results to provide weak support for maxnumber.
         try {
             while (rs.next() && (results.size()<maxNumber || maxNumber==-1)) {
@@ -209,21 +245,17 @@ public class BasicQueryHandler implements SearchQueryHandler {
                     int j = 1;
                     // make use of Node-cache to fill fields
                     // especially XML-fields can be heavy, otherwise (Documnents must be instantiated)
-                    for (StepField element : fields) {
-                        String fieldName = element.getFieldName(); // why not getAlias first?
-                        Step step = element.getStep();
+                    for (int i = 0; i < fields.length; i++) {
+                        String fieldName = fields[i].getFieldName(); // why not getAlias first?
+                        Step step = fields[i].getStep();
                         String alias = step.getAlias();
                         if (alias == null) {
                             // Use tablename as alias when no alias is specified.
                             alias = step.getTableName();
                         }
                         CoreField field = builder.getField(alias +  '.' + fieldName);
-                        if (field.getType() == Field.TYPE_BINARY) {
-                            log.debug("Binary field  " + field.getName() + ", skipping storeValue");
-                            continue;
-                        }
+                        if (field.getType() == CoreField.TYPE_BINARY) continue;
                         Object value = storageManager.getValue(rs, j++, field, false);
-                        log.debug("Got " + value);
                         node.storeValue(alias +  '.' + fieldName, value);
                     }
                     node.clearChanged();
@@ -244,11 +276,11 @@ public class BasicQueryHandler implements SearchQueryHandler {
     /**
      * Read the result list and creates a List of ResultNodes
      */
-    private List<MMObjectNode> readNodes(List<MMObjectNode> results,
-                                         DatabaseStorageManager storageManager,
-                                         ResultBuilder builder, StepField[] fields, ResultSet rs,
-            boolean sqlHandlerSupportsMaxNumber, int maxNumber) {
+    private List readNodes(ResultBuilder builder, StepField[] fields, ResultSet rs, boolean sqlHandlerSupportsMaxNumber, int maxNumber) throws SQLException {
+        List results = new ArrayList();
+        DatabaseStorageManager storageManager = (DatabaseStorageManager)mmbase.getStorageManager();
 
+        boolean storesAsFile = builder.getMMBase().getStorageManagerFactory().hasOption(org.mmbase.storage.implementation.database.Attributes.STORES_BINARY_AS_FILE);
         // Truncate results to provide weak support for maxnumber.
         try {
             while (rs.next() && (maxNumber>results.size() || maxNumber==-1)) {
@@ -256,13 +288,13 @@ public class BasicQueryHandler implements SearchQueryHandler {
                     ResultNode node = new ResultNode(builder);
                     node.start();
                     int j = 1;
-                    for (StepField element : fields) {
-                        String fieldName = element.getAlias();
+                    for (int i = 0; i < fields.length; i++) {
+                        String fieldName = fields[i].getAlias();
                         if (fieldName == null) {
-                            fieldName = element.getFieldName();
+                            fieldName = fields[i].getFieldName();
                         }
                         CoreField field = builder.getField(fieldName);
-                        if (field != null && field.getType() == Field.TYPE_BINARY) continue;
+                        if (field != null && field.getType() == CoreField.TYPE_BINARY) continue;
                         Object value = storageManager.getValue(rs, j++, field, false);
                         node.storeValue(fieldName, value);
                     }
@@ -284,21 +316,20 @@ public class BasicQueryHandler implements SearchQueryHandler {
     /**
      * Read the result list and creates a List of normal MMObjectNodes.
      */
-    private List<MMObjectNode> readNodes(List<MMObjectNode> results,
-                                         DatabaseStorageManager storageManager,
-                                         MMObjectBuilder builder, StepField[] fields, ResultSet rs,
-            boolean sqlHandlerSupportsMaxNumber, int maxNumber) {
+    private List readNodes(MMObjectBuilder builder, StepField[] fields, ResultSet rs, boolean sqlHandlerSupportsMaxNumber, int maxNumber) throws SQLException {
+        List results= new ArrayList();
+        DatabaseStorageManager storageManager = (DatabaseStorageManager)mmbase.getStorageManager();
 
-        boolean storesAsFile = storageManager.getFactory().hasOption(org.mmbase.storage.implementation.database.Attributes.STORES_BINARY_AS_FILE);
+        boolean storesAsFile = builder.getMMBase().getStorageManagerFactory().hasOption(org.mmbase.storage.implementation.database.Attributes.STORES_BINARY_AS_FILE);
         // determine indices of queried fields
-        Map<CoreField, Integer> fieldIndices = new HashMap<CoreField, Integer>();
+        Map fieldIndices = new HashMap();
         Step nodeStep = fields[0].getStep();
         int j = 1;
-        for (StepField element : fields) {
-            if (element.getType() == Field.TYPE_BINARY) continue;
-            Integer index = Integer.valueOf(j++);
-            if (element.getStep() == nodeStep) {
-                String fieldName =  element.getFieldName();
+        for (int i = 0; i < fields.length; i++) {
+            if (fields[i].getType() == CoreField.TYPE_BINARY) continue;
+            Integer index = new Integer(j++);
+            if (fields[i].getStep() == nodeStep) {
+                String fieldName =  fields[i].getFieldName();
                 CoreField field = builder.getField(fieldName);
                 if (field == null) {
                     log.warn("Did not find the field '" + fieldName + "' in builder " + builder);
@@ -309,13 +340,15 @@ public class BasicQueryHandler implements SearchQueryHandler {
         }
 
         // Test if ALL fields are queried
-        StringBuilder missingFields = null;
-        for (CoreField field : builder.getFields(NodeManager.ORDER_CREATE)) {
+        List builderFields = builder.getFields(NodeManager.ORDER_CREATE);
+        StringBuffer missingFields = null;
+        for (Iterator f = builderFields.iterator(); f.hasNext();) {
+            CoreField field = (CoreField)f.next();
             if (field.inStorage()) {
-                if (field.getType() == Field.TYPE_BINARY) continue;
+                if (field.getType() == CoreField.TYPE_BINARY) continue;
                 if (fieldIndices.get(field) == null) {
                     if (missingFields == null) {
-                        missingFields = new StringBuilder(field.getName());
+                        missingFields = new StringBuffer(field.getName());
                     } else {
                         missingFields.append(", ").append(field.getName());
                     }
@@ -332,19 +365,19 @@ public class BasicQueryHandler implements SearchQueryHandler {
         // Truncate results to provide weak support for maxnumber.
         try {
             NodeCache nodeCache = NodeCache.getCache();
-            Cache<Integer, Integer> typeCache = CacheManager.getCache("TypeCache");
+            Cache typeCache = Cache.getCache("TypeCache");
             int builderType = builder.getObjectType();
-            Integer oTypeInteger = Integer.valueOf(builderType);
+            Integer oTypeInteger = new Integer(builderType);
             while (rs.next() && (maxNumber > results.size() || maxNumber==-1)) {
                 try {
                     /*
                      * This while statement does not deal with mmbase inheritance
-                     * It creates nodes based on the builder passed in. Nodes with
+                     * It creates nodes based on the builder passed in. Nodes with 
                      * subtypes of this builder are only filled with the field values
                      * of this builder. Builders of a subtype are not stored in the nodeCache
-                     * to limit the time scope of these nodes, because they are not complete.
+                     * to limit the time scope of these nodes, because they are not complete. 
                      */
-
+                    
                     MMObjectNode node;
                     if (!isVirtual) {
                         node = new MMObjectNode(builder, false);
@@ -352,20 +385,21 @@ public class BasicQueryHandler implements SearchQueryHandler {
                         node = new VirtualNode(builder);
                     }
                     node.start();
-                    for (CoreField field :  builder.getFields(NodeManager.ORDER_CREATE)) {
+                    for (Iterator i = builder.getFields(NodeManager.ORDER_CREATE).iterator(); i.hasNext(); ) {
+                        CoreField field = (CoreField)i.next();
                         if (! field.inStorage()) continue;
-                        Integer index = fieldIndices.get(field);
+                        Integer index = (Integer) fieldIndices.get(field);
                         Object value = null;
                         String fieldName = field.getName();
                         if (index != null) {
                             value = storageManager.getValue(rs, index.intValue(), field, true);
                         } else {
                             java.sql.Blob b = null;
-                            if (field.getType() == Field.TYPE_BINARY && storesAsFile) {
+                            if (field.getType() == CoreField.TYPE_BINARY && storesAsFile) {
                                 log.debug("Storage did not return data for '" + fieldName + "', supposing it on disk");
                                 // must have been a explicitely specified 'blob' field
                                 b = storageManager.getBlobValue(node, field, true);
-                            } else if (field.getType() == Field.TYPE_BINARY) {
+                            } else if (field.getType() == CoreField.TYPE_BINARY) {
                                 // binary fields never come directly from the database
                                 value = MMObjectNode.VALUE_SHORTED;
                             } else if (! isVirtual){
@@ -390,9 +424,9 @@ public class BasicQueryHandler implements SearchQueryHandler {
                     // (provided the node is persistent)
                     if (! isVirtual) {
                         int otype = node.getOType();
-                        Integer number = Integer.valueOf(node.getNumber());
+                        Integer number = new Integer(node.getNumber());
                         if (otype == builderType) {
-                            MMObjectNode cacheNode = nodeCache.get(number);
+                            MMObjectNode cacheNode = (MMObjectNode) nodeCache.get(number);
                             if (cacheNode != null) {
                                 node = cacheNode;
                             } else {
@@ -400,7 +434,7 @@ public class BasicQueryHandler implements SearchQueryHandler {
                             }
                             typeCache.put(number, oTypeInteger);
                         } else {
-                            typeCache.put(number, Integer.valueOf(otype));
+                            typeCache.put(number, new Integer(otype));
                         }
                     }
 
