@@ -16,21 +16,19 @@ package org.mmbase.util;
  *
  * @author Michiel Meeuwissen
  * @since  MMBase-1.6
- * @version $Id: Casting.java,v 1.124 2009-01-05 10:30:43 michiel Exp $
+ * @version $Id: Casting.java,v 1.89.2.5 2008-06-19 13:00:28 michiel Exp $
  */
 
 import java.util.*;
 import java.text.*;
 import java.io.*;
 import javax.xml.parsers.*;
-import java.math.BigDecimal;
+import javax.xml.transform.*;
 import org.mmbase.bridge.*;
 import org.mmbase.bridge.Node;
 import org.mmbase.bridge.util.NodeWrapper;
 import org.mmbase.bridge.util.NodeMap;
 import org.mmbase.bridge.util.MapNode;
-import org.mmbase.datatypes.DataType;
-import org.mmbase.datatypes.DataTypes;
 import org.mmbase.util.transformers.CharTransformer;
 import org.mmbase.util.logging.*;
 import org.mmbase.util.xml.XMLWriter;
@@ -53,12 +51,7 @@ public class Casting {
      * XXX: According to http://en.wikipedia.org/wiki/ISO_8601, the standard allows ' ' in stead of
      * 'T' if no misunderstanding arises, which is the case here. So I don't think this is 'loose'.
      */
-    public final static ThreadLocal<DateFormat> ISO_8601_LOOSE =
-        new ThreadLocal<DateFormat>() {
-        protected synchronized DateFormat initialValue() {
-                return new SimpleDateFormat("yyyy-MM-dd HH:mm:ss", Locale.US);
-            }
-    };
+    public final static DateFormat ISO_8601_LOOSE = new SimpleDateFormat("yyyy-MM-dd HH:mm:ss", Locale.US);
 
     /**
      * A Date formatter that creates a ISO 8601 datetime according to UTC/GMT.
@@ -68,31 +61,18 @@ public class Casting {
      *
      * XXX: Hmm, we parse with UTC now, while we don't store them as such.
      */
-    public final static ThreadLocal<DateFormat> ISO_8601_UTC =
-        new ThreadLocal<DateFormat>() {
-        protected synchronized DateFormat initialValue() {
-                DateFormat df = new SimpleDateFormat("yyyy-MM-dd'T'HH:mm:ss'Z'", Locale.US);
-                try {
-                    df.setTimeZone(TimeZone.getTimeZone("UTC"));
-                } catch (Throwable t) {
-                    log.warn(t.getMessage(), t);
-                }
-                return df;
-            }
-    };
+    public final static DateFormat ISO_8601_UTC = new SimpleDateFormat("yyyy-MM-dd'T'HH:mm:ss'Z'", Locale.US);
+    static {
+        try {
+            ISO_8601_UTC.setTimeZone(TimeZone.getTimeZone("UTC"));
+        } catch (Throwable t) {
+            log.warn(t.getMessage(), t);
+        }
+    }
 
-    public final static ThreadLocal<DateFormat> ISO_8601_DATE =
-        new ThreadLocal<DateFormat>() {
-        protected synchronized DateFormat initialValue() {
-                return new SimpleDateFormat("yyyy-MM-dd", Locale.US);
-            }
-    };
-    public final static ThreadLocal<DateFormat> ISO_8601_TIME =
-        new ThreadLocal<DateFormat>() {
-        protected synchronized DateFormat initialValue() {
-                return new SimpleDateFormat("HH:mm:ss", Locale.US);
-            }
-    };
+    public final static DateFormat ISO_8601_DATE = new SimpleDateFormat("yyyy-MM-dd", Locale.US);
+    public final static DateFormat ISO_8601_TIME = new SimpleDateFormat("HH:mm:ss", Locale.US);
+
 
 
 
@@ -120,7 +100,6 @@ public class Casting {
         }
     }
 
-
     /**
      * Tries to 'cast' an object for use with the provided class. E.g. if value is a String, but the
      * type passed is Integer, then the string is act to an Integer.
@@ -131,7 +110,7 @@ public class Casting {
      * @return value the converted value
      * @since MMBase-1.8
      */
-    public static <C> C toType(Class<C> type, Object value) {
+    public static Object toType(Class type, Object value) {
         return toType(type, null, value);
     }
 
@@ -148,97 +127,79 @@ public class Casting {
      * @return value the converted value
      * @since MMBase-1.8
      */
-    public static <C> C toType(Class<C> type, Cloud cloud, Object value) {
+    public static Object toType(Class type, Cloud cloud, Object value) {
         if (value != null && isType(type, value))  {
-            return (C) value;
+            return value;
         } else {
             if (type.equals(Boolean.TYPE) || type.equals(Boolean.class)) {
-                return (C) Boolean.valueOf(toBoolean(value));
+                return Boolean.valueOf(toBoolean(value));
             } else if (type.equals(Byte.TYPE) || type.equals(Byte.class)) {
-                return (C) Byte.valueOf(toInteger(value).byteValue());
+                return new Byte(toInteger(value).byteValue());
             } else if (type.equals(Character.TYPE) || type.equals(Character.class)) {
                 String chars = toString(value);
                 if (chars.length() > 0) {
-                    return (C) Character.valueOf(chars.charAt(0));
+                    return new Character(chars.charAt(0));
                 } else {
-                    return (C) Character.valueOf(Character.MIN_VALUE);
+                    return new Character(Character.MIN_VALUE);
                 }
             } else if (type.equals(Short.TYPE) || type.equals(Short.class)) {
-                return (C) Short.valueOf(toInteger(value).shortValue());
+                return new Short(toInteger(value).shortValue());
             } else if (type.equals(Integer.TYPE) || type.equals(Integer.class)) {
-                return (C) toInteger(value);
+                return toInteger(value);
             } else if (type.equals(Long.TYPE) || type.equals(Long.class)) {
-                return (C) Long.valueOf(toLong(value));
+                return new Long(toLong(value));
             } else if (type.equals(Float.TYPE) || type.equals(Float.class)) {
-                return (C) Float.valueOf(toFloat(value));
+                return new Float(toFloat(value));
             } else if (type.equals(Double.TYPE) || type.equals(Double.class)) {
-                return (C) Double.valueOf(toDouble(value));
+                return new Double(toDouble(value));
             } else if (type.equals(Number.class)) {
                 Number res;
                 try {
-                    res = Long.valueOf("" + value);
+                    res = new Long("" + value);
                 } catch (NumberFormatException nfe) {
                     try {
-                        res = Double.valueOf("" + value);
+                        res = new Double("" + value);
                     } catch (NumberFormatException nfe1) {
-                        res = Integer.valueOf(-1);
+                        res = new Integer(-1);
                     }
                 }
-                return (C) res;
+                return res;
             } else if (type.equals(byte[].class)) {
-                return (C) toByte(value);
+                return toByte(value);
             } else if (type.equals(String.class)) {
-                return (C) toString(value);
+                return toString(value);
             } else if (type.equals(Date.class)) {
-                return (C) toDate(value);
+                return toDate(value);
             } else if (type.equals(Node.class)) {
                 try {
                     if (cloud == null) {
                         if (anonymousCloud == null) anonymousCloud = ContextProvider.getDefaultCloudContext().getCloud("mmbase");
                         cloud = anonymousCloud;
                     }
-                    return (C) toNode(value, cloud);
+                    return toNode(value, cloud);
                 } catch (Exception e) {
                     // suppose that that was because mmbase not running
-                    return (C) (value instanceof Node ? value : null);
+                    return value instanceof Node ? value : null;
                 }
             } else if (type.equals(Document.class)) {
-                return (C) toXML(value);
+                return toXML(value);
             } else if (type.equals(List.class)) {
-                return (C) toList(value);
+                return toList(value);
             } else if (type.equals(Map.class)) {
-                return (C) toMap(value);
+                return toMap(value);
             } else if (type.equals(Collection.class)) {
-                return (C) toCollection(value);
-            } else if (type.equals(BigDecimal.class)) {
-                return (C) toDecimal(value);
-            } else if (type.equals(java.util.regex.Pattern.class)) {
-                if (java.util.regex.Pattern.class.isInstance(value)) {
-                    return (C) value;
-                }
-                return (C) java.util.regex.Pattern.compile(toString(value));
-            } else if (type.equals(Class.class)) {
-                if (Class.class.isInstance(value)) {
-                    return (C) value;
-                }
-                try {
-                    return (C) Class.forName(toString(value));
-                } catch (Exception e) {
-                    throw new IllegalArgumentException(e);
-                }
-           } else if (type.equals(org.mmbase.datatypes.DataType.class)) {
-                return (C) toDataType(value);
-           } else if (type.equals(org.mmbase.security.Operation.class)) {
-                return (C) org.mmbase.security.Operation.getOperation(toString(value));
+                return toCollection(value);
             } else {
-                log.error("Don't know how to convert to " + type, new Exception());
                 if (value == null || "".equals(value)) {
                     // just to avoid the error
                     return null;
                 }
-
+                log.error("Dont now how to convert '" + value.getClass() + " to " + type);
+                if (log.isDebugEnabled()) {
+                    log.debug("cause: ", new Exception());
+                }
                 // don't know
-                return (C) value;
+                return value;
             }
         }
     }
@@ -258,13 +219,12 @@ public class Casting {
             Node.class.isAssignableFrom(type) ||
             Document.class.isAssignableFrom(type) ||
             Collection.class.isAssignableFrom(type) ||
-            Date.class.isAssignableFrom(type) ||
             Map.class.isAssignableFrom(type);
     }
 
     /**
      * Convert an object to a String.
-     * <code>null</code> is converted to an empty string.
+     * 'null' is converted to an empty string.
      * @param o the object to convert
      * @return the converted value as a <code>String</code>
      */
@@ -276,7 +236,7 @@ public class Casting {
             return "";
         }
 
-        return toStringBuilder(new StringBuilder(), o).toString();
+        return toStringBuffer(new StringBuffer(), o).toString();
     }
 
     /**
@@ -297,23 +257,6 @@ public class Casting {
     }
 
     /**
-     * Convert an object to a string, using a StringBuilder
-     * @param buffer The StringBuilder with which to create the string
-     * @param o the object to convert
-     * @return the StringBuilder used for conversion (same as the buffer parameter)
-     * @since MMBase-1.9
-     */
-    public static StringBuilder toStringBuilder(StringBuilder buffer, Object o) {
-        if (o == null) {
-            return buffer;
-        }
-        try {
-            toWriter(new StringBuilderWriter(buffer), o);
-        } catch (java.io.IOException e) {}
-        return buffer;
-    }
-
-    /**
      * Convert an object to a string, using a Writer.
      * @param writer The Writer with which to create (write) the string
      * @param o the object to convert
@@ -323,23 +266,18 @@ public class Casting {
     public static Writer toWriter(Writer writer, Object o) throws java.io.IOException {
         if (o instanceof Writer) {
             return writer;
-        } else if (o instanceof SortedBundle.ValueWrapper) {
-            o = ((SortedBundle.ValueWrapper) o).getKey();
         }
         Object s = wrap(o, null);
-        if (s instanceof org.mmbase.bridge.Query) {
-            s = ((org.mmbase.bridge.Query) s).toSql();
-        }
         writer.write(s.toString());
         return writer;
     }
 
     /**
-     * Wraps an object in another object with a toString as we desire. Casting can now be done with
+     * Wraps it in an object with a toString as we desire. Casting can now be done with
      * toString() on the resulting object.
      *
      * This is used to make JSTL en EL behave similarly as mmbase taglib when writing objects to the
-     * page (taglib calls Casting, but JSTL of course doesn't).
+     * page (taglib calls Casting, but they of course don't).
      *
      * @todo  Not everything is wrapped (and can be unwrapped) already.
      * @param o        The object to be wrapped
@@ -350,11 +288,8 @@ public class Casting {
     public static Object wrap(final Object o, final CharTransformer escaper) {
         if (o == null) {
             return escape(escaper, "");
-        } else if (o instanceof Unwrappable) {
-            return o;
         } else if (o instanceof Node) {
             return new NodeMap((Node)o) {
-
                     public Object getValue(String fieldName) {
                         NodeManager nm = getNodeManager();
                         if (nm.hasField(fieldName)) {
@@ -369,7 +304,6 @@ public class Casting {
                                 }
                             case org.mmbase.bridge.Field.TYPE_DATETIME: return wrap(getDateValue(fieldName), escaper);
                             case org.mmbase.bridge.Field.TYPE_XML:      return wrap(getXMLValue(fieldName), escaper);
-                            case org.mmbase.bridge.Field.TYPE_UNKNOWN:  return wrap(super.getValue(fieldName), escaper);
                             default: return escape(escaper, super.getStringValue(fieldName));
                             }
                         } else {
@@ -385,21 +319,20 @@ public class Casting {
                     private static final long serialVersionUID = 1L; // increase this if object chages.
                     public String toString() {
                         long time = getTime();
-                        return time == -1 ? "-1" : ("" + time / 1000);
+                        return time == -1 ? ("" + time) : ("" + time / 1000);
                     }
                 };
         } else if (o instanceof org.w3c.dom.Node) {
             // don't know how to wrap
             return escape(escaper, XMLWriter.write((org.w3c.dom.Node) o, false, true));
-        } else if (o instanceof org.mmbase.bridge.NodeList) {
-            return new NodeListWrapper((org.mmbase.bridge.NodeList) o, escaper);
         } else if (o instanceof List) {
             return new ListWrapper((List) o, escaper);
         } else if (o instanceof byte[]) {
             return escape(escaper, new String((byte[])o));
-        } else if (o instanceof Object[]) {
-            return new ListWrapper(Arrays.asList((Object[])o), escaper);
         } else if (o instanceof String) {
+            // sad this is that this cannont be unwrapped because string cannot be reimplemnented or extended.
+            // But many methods, want a String, not a CharSequence.
+            // 22.
             return escape(escaper, (String) o);
         } else if (o instanceof CharSequence) {
             return new StringWrapper((CharSequence) o, escaper);
@@ -424,8 +357,6 @@ public class Casting {
     public static Object unWrap(final Object o) {
         if (o instanceof NodeWrapper) {
             return ((NodeWrapper)o).getNode();
-        } else if (o instanceof NodeListWrapper) {
-            return ((NodeListWrapper)o).getCollection();
         } else if (o instanceof ListWrapper) {
             return ((ListWrapper)o).getList();
         } else if (o instanceof StringWrapper) {
@@ -448,7 +379,6 @@ public class Casting {
         return toList(o, ",");
     }
 
-
     /**
      * As {@link #toList(Object)} but with one extra argument.
      *
@@ -466,10 +396,11 @@ public class Casting {
         } else if (o instanceof Map) {
             return new ArrayList(((Map)o).entrySet());
         } else {
-            if (o == null) {
-                return Collections.emptyList();
+            List l = new ArrayList();
+            if (o != null) {
+                l.add(o);
             }
-            return Collections.singletonList(o);
+            return l;
         }
     }
 
@@ -498,9 +429,12 @@ public class Casting {
         } else if (o instanceof Node) {
             return new NodeMap((Node)o);
         } else {
-            return Collections.singletonMap(o, o);
+            Map m = new HashMap();
+            m.put(o, o);
+            return m;
         }
     }
+
 
     /**
      * Transforms an object to a collection. If the object is a collection already, then nothing
@@ -520,9 +454,6 @@ public class Casting {
         } else if (o instanceof Object[]) {
             return Arrays.asList((Object[]) o);
         } else {
-            if (o == null) {
-                return Collections.emptyList();
-            }
             return Collections.singletonList(o);
         }
     }
@@ -532,7 +463,6 @@ public class Casting {
     public static Collection toCollection(Object o) {
         return toCollection(o, ",");
     }
-
 
     /**
      * Convert the value to a <code>Document</code> object.
@@ -577,22 +507,6 @@ public class Casting {
             return (byte[])obj;
         } else if (obj instanceof org.apache.commons.fileupload.FileItem) {
             return ((org.apache.commons.fileupload.FileItem) obj).get();
-        } else if (obj instanceof InputStream) {
-            InputStream in = (InputStream) obj;
-            ByteArrayOutputStream out = new ByteArrayOutputStream(1024);
-            byte[] buf = new byte[1024];
-            try {
-                int tot;
-                do {
-                    tot = in.read(buf, 0, 1024);
-                    out.write(buf, 0, tot);
-                } while (tot > 0);
-            } catch (IOException ioe) {
-                log.error(ioe);
-            } finally {
-                try { in.close(); } catch (IOException ioe) {}
-            }
-            return out.toByteArray();
         } else {
             return toString(obj).getBytes();
         }
@@ -602,8 +516,7 @@ public class Casting {
         if (obj instanceof InputStream) {
             return (InputStream) obj;
         } else {
-            byte[] bytes = toByte(obj);
-            return new ByteArrayInputStream(bytes, 0, bytes.length);
+            return new ByteArrayInputStream(toByte(obj));
         }
     }
 
@@ -611,17 +524,19 @@ public class Casting {
     /**
      * Convert an object to an Node.
      * If the value is Numeric, the method
-     * tries to obtain the mmbase object with that number.
-     * A <code>Map</code> returns a virtual <code>Node</code> representing the map, (a
-     * {@link MapNode}).
-     * All remaining situations return the node with the alias <code>i.toString()</code>, which can
-     * be <code>null</code> if no node which such an alias.
+     * tries to obtrain the object with that number.
+     * If it is a String, the method tries to obtain the object with
+     * that alias.
+     * All remaining situations return <code>null</code>.
      * @param i the object to convert
      * @param cloud the Cloud to use for loading a node
      * @return the value as a <code>Node</code>
      * @since MMBase-1.7
      */
     public static Node toNode(Object i, Cloud cloud) {
+        if (log.isDebugEnabled()) {
+            log.debug("Convering to node " + i + " using " + cloud);
+        }
         Node res = null;
         if (i instanceof Node) {
             res = (Node)i;
@@ -633,7 +548,7 @@ public class Casting {
         } else if (i instanceof Map) {
             res = new MapNode((Map)i, cloud);
         } else if (i != null && !i.equals("")) {
-            res = cloud.getNode(toString(i));
+            res = cloud.getNode(i.toString());
         }
         return res;
     }
@@ -651,8 +566,20 @@ public class Casting {
      */
     static public int toInt(Object i, int def) {
         int res = def;
-        if (i == null) {
-            return def;
+        if (i instanceof Node) {
+            res = ((Node)i).getNumber();
+        } else if (i instanceof Boolean) {
+            res = ((Boolean)i).booleanValue() ? 1 : 0;
+        } else if (i instanceof Date) {
+            long timeValue = ((Date)i).getTime();
+            if (timeValue !=-1) timeValue = timeValue / 1000;
+            if (timeValue > Integer.MAX_VALUE) {
+                timeValue = Integer.MAX_VALUE;
+            }
+            if (timeValue < Integer.MIN_VALUE) {
+                timeValue = Integer.MIN_VALUE;
+            }
+            res = (int) timeValue;
         } else if (i instanceof Number) {
             long l = ((Number)i).longValue();
             if (l > Integer.MAX_VALUE) {
@@ -662,40 +589,20 @@ public class Casting {
             } else {
                 res = (int) l;
             }
-        } else if (i instanceof Node) {
-            res = ((Node)i).getNumber();
-        } else if (i instanceof Boolean) {
-            res = ((Boolean)i).booleanValue() ? 1 : 0;
-        } else if (i instanceof Date) {
-            long timeValue = ((Date)i).getTime();
-
-            if (timeValue != -1) timeValue /= 1000;
-
-            if (timeValue > Integer.MAX_VALUE) {
-                res = Integer.MAX_VALUE;
-            } else if (timeValue < Integer.MIN_VALUE) {
-                res = Integer.MIN_VALUE;
-            } else {
-                res = (int) timeValue;
-            }
-        } else if (i instanceof Object[]) {
-            Object[] array = (Object[]) i;
-            if (array.length == 0) return 0;
-            if (array.length >= 1) return toInt(array[0], def);
         } else if (i != null) {
             try {
                 res = Integer.parseInt("" + i);
             } catch (NumberFormatException e) {
-                // not an integer? perhaps it is a float or double represented as String.
+                // not an integer? perhaps it is a fload or double represented as String.
                 try {
-                    res = toInt(Double.valueOf("" + i), def); // recursive to hit the check on MAX_VALUE/MIN_VALUE also here.
+                    res = Double.valueOf("" + i).intValue();
                 } catch (NumberFormatException ex) {
+
                     // try if the value is a string representing a boolean.
                     if(i instanceof String){
-                        String s = ((String)i).toLowerCase();
-                        if (s.equals("true") || s.equals("yes")) {
+                        if(((String)i).toLowerCase().equals(("true"))){
                             res = 1;
-                        } else if(s.equals("false") || s.equals("no")) {
+                        }else if(((String)i).toLowerCase().equals(("false"))){
                             res = 0;
                         }
                     }
@@ -767,7 +674,7 @@ public class Casting {
         if (i instanceof Integer) {
             return (Integer)i;
         } else {
-            return Integer.valueOf(toInt(i));
+            return new Integer(toInt(i));
         }
     }
 
@@ -792,18 +699,10 @@ public class Casting {
             if (res !=- 1) res /= 1000;
         } else if (i instanceof Node) {
             res = ((Node)i).getNumber();
-        } else if (i instanceof Object[]) {
-            Object[] array = (Object[]) i;
-            if (array.length == 0) return 0;
-            if (array.length >= 1) return toLong(array[0], def);
         } else if (i != null) {
             if(i instanceof String){
-                String s = ((String)i).toLowerCase();
-                if (s.equals("true") || s.equals("yes")) {
-                    return 1;
-                } else if(s.equals("false") || s.equals("no")) {
-                    return 0;
-                }
+                if(((String)i).toLowerCase().equals("true")) return 1;
+                if(((String)i).toLowerCase().equals("false")) return 0;
             }
             try {
                 res = Long.parseLong("" + i);
@@ -854,17 +753,23 @@ public class Casting {
             res = ((Node)i).getNumber();
         } else if (i != null) {
             if(i instanceof String){
-                String s = ((String)i).toLowerCase();
-                if (s.equals("true") || s.equals("yes")) {
+                if(((String)i).toLowerCase().equals("true")) {
                     res = 1;
-                } else if(s.equals("false") || s.equals("no")) {
+                } else if(((String)i).toLowerCase().equals("false")) {
                     res = 0;
                 }
             }
             try {
                 res = Float.parseFloat("" + i);
             } catch (NumberFormatException e) {
-                // use default
+//              try if the value is a string representing a boolean.
+                if(i instanceof String){
+                    if(((String)i).toLowerCase().equals(("true"))){
+                        res = 1;
+                    } else if(((String)i).toLowerCase().equals(("false"))){
+                        res = 0;
+                    }
+                }
             }
         }
         return res;
@@ -902,20 +807,15 @@ public class Casting {
             if (res != -1) res = res / 1000;
         } else if (i instanceof Node) {
             res = ((Node)i).getNumber();
-        } else if (i instanceof Object[]) {
-            Object[] array = (Object[]) i;
-            if (array.length == 0) return 0;
-            if (array.length >= 1) return toDouble(array[0], def);
         } else if (i != null) {
             try {
                 res = Double.parseDouble("" + i);
             } catch (NumberFormatException e) {
 //              try if the value is a string representing a boolean.
                 if(i instanceof String){
-                    String s = ((String)i).toLowerCase();
-                    if (s.equals("true") || s.equals("yes")) {
+                    if(((String)i).toLowerCase().equals(("true"))){
                         res = 1;
-                    } else if(s.equals("false") || s.equals("no")) {
+                    }else if(((String)i).toLowerCase().equals(("false"))){
                         res = 0;
                     }
                 }
@@ -936,51 +836,6 @@ public class Casting {
         return toDouble(i, -1);
     }
 
-
-    /**
-     * @since MMBase-1.9.1
-     */
-    static public BigDecimal toDecimal(Object i) {
-        if (i instanceof BigDecimal) {
-            return (BigDecimal) i;
-        } else if (i instanceof CharSequence) {
-            try {
-                return new BigDecimal("" + i).stripTrailingZeros();
-            } catch (NumberFormatException nfe) {
-                if(i instanceof String){
-                    String s = ((String)i).toLowerCase();
-                    if (s.equals("true") || s.equals("yes")) {
-                        return BigDecimal.ONE;
-                    } else if(s.equals("false") || s.equals("no")) {
-                        return BigDecimal.ZERO;
-                    }
-                }
-                return BigDecimal.ONE.negate();
-            }
-        } else if (i instanceof Long) {
-            return new BigDecimal((Long) i);
-        } else if (i instanceof Integer) {
-            return new BigDecimal((Integer) i);
-        } else if (i instanceof Double) {
-            return new BigDecimal((Double) i);
-        } else if (i instanceof Float) {
-            return new BigDecimal((Float) i);
-        } else {
-            return new BigDecimal(toDouble(i)).stripTrailingZeros();
-        }
-    }
-
-    /**
-     * @since MMBase-1.9.1
-     */
-    static public DataType toDataType(Object o) {
-        if (o instanceof DataType) {
-            return (DataType) o;
-        } else {
-            return DataTypes.getDataType(toString(o));
-        }
-
-    }
 
 
     /**
@@ -1053,13 +908,10 @@ public class Casting {
             dfactory.setValidating(false);
             dfactory.setNamespaceAware(true);
             DOCUMENTBUILDER = dfactory.newDocumentBuilder();
-            DOCUMENTBUILDER.setEntityResolver(new org.mmbase.util.xml.EntityResolver(false));
+            DOCUMENTBUILDER.setEntityResolver(new XMLEntityResolver(false));
         } catch (ParserConfigurationException pce) {
-            log.error("[sax parser]: " + pce.toString(), pce);
-        } catch (Exception e) {
-            log.error(e);
+            log.error("[sax parser]: " + pce.toString() + "\n" + Logging.stackTrace(pce));
         }
-        assert DOCUMENTBUILDER != null;
     }
     /**
      * Convert a String value to a Document
@@ -1071,13 +923,12 @@ public class Casting {
         if (value == null) {
             return null;
         }
-        if (log.isTraceEnabled()) {
+        if (log.isDebugEnabled()) {
             log.trace("using xml string:\n" + value);
         }
         try {
             Document doc;
-            final org.mmbase.util.xml.ErrorHandler errorHandler = new org.mmbase.util.xml.ErrorHandler(false, org.mmbase.util.xml.ErrorHandler.NEVER);
-            assert DOCUMENTBUILDER != null;
+            final XMLErrorHandler errorHandler = new XMLErrorHandler(false, org.mmbase.util.XMLErrorHandler.NEVER);
             synchronized(DOCUMENTBUILDER) {
                 // dont log errors, and try to process as much as possible...
                 DOCUMENTBUILDER.setErrorHandler(errorHandler);
@@ -1085,7 +936,7 @@ public class Casting {
                 // Yes, in contradiction to what one would think, XML are bytes, rather then characters.
                 doc = DOCUMENTBUILDER.parse(new java.io.ByteArrayInputStream(value.getBytes("UTF-8")));
             }
-            if (log.isTraceEnabled()) {
+            if (log.isDebugEnabled()) {
                 log.trace("parsed: " + XMLWriter.write(doc, false, true));
             }
             if (!errorHandler.foundNothing()) {
@@ -1093,12 +944,11 @@ public class Casting {
             }
             return doc;
         } catch (org.xml.sax.SAXException se) {
-            if (log.isDebugEnabled()) {
-                log.debug("[sax] not well formed xml: " + se.toString() + "(" + se.getMessage() + ")\n" + Logging.stackTrace(se));
-            }
+            log.debug("[sax] not well formed xml: " + se.toString() + "(" + se.getMessage() + ")\n" + Logging.stackTrace(se));
             return convertStringToXML("<p>" + Encode.encode("ESCAPE_XML", value) + "</p>"); // Should _always_ be sax-compliant.
         } catch (java.io.IOException ioe) {
             String msg = "[io] not well formed xml: " + ioe.toString() + "\n" + Logging.stackTrace(ioe);
+            log.error(msg);
             throw new IllegalArgumentException(msg);
         }
     }
@@ -1127,11 +977,11 @@ public class Casting {
         public Iterator iterator() { return list.iterator(); }
         public ListIterator listIterator() { return list.listIterator(); }
         public String toString() {
-            StringBuilder buf = new StringBuilder();
+            StringBuffer buf = new StringBuffer();
             Iterator i = list.iterator();
             boolean hasNext = i.hasNext();
             while (hasNext) {
-                Casting.toStringBuilder(buf, i.next());
+                Casting.toStringBuffer(buf, i.next());
                 hasNext = i.hasNext();
                 if (hasNext) {
                     buf.append(',');
@@ -1142,32 +992,6 @@ public class Casting {
         public List getList() {
             return list;
         }
-    }
-
-    /**
-     * @since MMBase-1.9
-     */
-    public static class NodeListWrapper extends org.mmbase.bridge.util.CollectionNodeList {
-        private final CharTransformer escaper;
-        NodeListWrapper(org.mmbase.bridge.NodeList list, CharTransformer e) {
-            super(list);
-            escaper = e;
-        }
-        public Node get(int index) { return (Node) Casting.wrap(super.get(index), escaper); }
-        public String toString() {
-            StringBuilder buf = new StringBuilder();
-            Iterator<Node> i = iterator();
-            boolean hasNext = i.hasNext();
-            while (hasNext) {
-                Casting.toStringBuilder(buf, i.next());
-                hasNext = i.hasNext();
-                if (hasNext) {
-                    buf.append(',');
-                }
-            }
-            return buf.toString();
-        }
-
     }
 
     /**
@@ -1204,26 +1028,6 @@ public class Casting {
         }
         public CharSequence getString() {
             return string;
-        }
-    }
-
-    /**
-     * Clases implementint this will not be wrapped by {@link #wrap}, even if the e.g. are CharSequence.
-     * @since MMBase-1.9
-     */
-    public static interface Unwrappable {
-    }
-
-    /**
-     * @since MMBase-1.9
-     */
-    public static boolean equals(Object o1, Object o2) {
-        if (o1 == null) return o2 == null;
-
-        if (o1 instanceof org.w3c.dom.Node) {
-            return (o2 instanceof org.w3c.dom.Node && ((org.w3c.dom.Node) o1).isEqualNode((org.w3c.dom.Node) o2));
-        } else {
-            return o1.equals(o2);
         }
     }
 
